Update Tutorial- notebooks to output generated by latest Python (3.9.1)

--- a/NRPyPN/PN-MOmega.ipynb
+++ b/NRPyPN/PN-MOmega.ipynb
@@ -98,7 +98,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:15:10.623140Z",
+     "iopub.status.busy": "2020-12-17T02:15:10.622497Z",
+     "iopub.status.idle": "2020-12-17T02:15:10.794295Z",
+     "shell.execute_reply": "2020-12-17T02:15:10.793643Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 0: Add NRPy's directory to the path\n",
@@ -134,7 +141,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:15:10.799789Z",
+     "iopub.status.busy": "2020-12-17T02:15:10.799266Z",
+     "iopub.status.idle": "2020-12-17T02:15:10.800777Z",
+     "shell.execute_reply": "2020-12-17T02:15:10.801270Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Second version, for validation purposes only.\n",
@@ -153,7 +167,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:15:10.807822Z",
+     "iopub.status.busy": "2020-12-17T02:15:10.807338Z",
+     "iopub.status.idle": "2020-12-17T02:15:10.809133Z",
+     "shell.execute_reply": "2020-12-17T02:15:10.808702Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Third version, directly from Toni Ramos-Buades' Mathematica notebook (thanks Toni!)\n",
@@ -184,7 +205,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:15:10.837765Z",
+     "iopub.status.busy": "2020-12-17T02:15:10.837270Z",
+     "iopub.status.idle": "2020-12-17T02:15:10.839076Z",
+     "shell.execute_reply": "2020-12-17T02:15:10.838671Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Construct terms a_5 and a_6, from\n",
@@ -215,7 +243,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:15:10.844913Z",
+     "iopub.status.busy": "2020-12-17T02:15:10.844458Z",
+     "iopub.status.idle": "2020-12-17T02:15:10.846191Z",
+     "shell.execute_reply": "2020-12-17T02:15:10.845723Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Second version, for validation purposes only.\n",
@@ -239,7 +274,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:15:10.851928Z",
+     "iopub.status.busy": "2020-12-17T02:15:10.851473Z",
+     "iopub.status.idle": "2020-12-17T02:15:10.853230Z",
+     "shell.execute_reply": "2020-12-17T02:15:10.852880Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Third version, directly from Toni Ramos-Buades' Mathematica notebook (thanks Toni!)\n",
@@ -272,7 +314,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:15:10.862133Z",
+     "iopub.status.busy": "2020-12-17T02:15:10.861639Z",
+     "iopub.status.idle": "2020-12-17T02:15:10.863515Z",
+     "shell.execute_reply": "2020-12-17T02:15:10.863001Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Construct term a_7, from Eq A1 of\n",
@@ -304,7 +353,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:15:10.869999Z",
+     "iopub.status.busy": "2020-12-17T02:15:10.869431Z",
+     "iopub.status.idle": "2020-12-17T02:15:10.871302Z",
+     "shell.execute_reply": "2020-12-17T02:15:10.870892Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Second version, for validation purposes only.\n",
@@ -331,7 +387,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:15:10.880499Z",
+     "iopub.status.busy": "2020-12-17T02:15:10.880027Z",
+     "iopub.status.idle": "2020-12-17T02:15:10.882124Z",
+     "shell.execute_reply": "2020-12-17T02:15:10.881724Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Third version, directly from Toni Ramos-Buades' Mathematica notebook (thanks Toni!)\n",
@@ -360,7 +423,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:15:10.888747Z",
+     "iopub.status.busy": "2020-12-17T02:15:10.888281Z",
+     "iopub.status.idle": "2020-12-17T02:15:10.890231Z",
+     "shell.execute_reply": "2020-12-17T02:15:10.889782Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Finally, sum the expressions for a_k to construct p_t as prescribed:\n",
@@ -386,7 +456,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:15:10.894384Z",
+     "iopub.status.busy": "2020-12-17T02:15:10.893940Z",
+     "iopub.status.idle": "2020-12-17T02:15:10.895783Z",
+     "shell.execute_reply": "2020-12-17T02:15:10.895324Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Second version, for validation purposes only.\n",
@@ -425,7 +502,14 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:15:10.905837Z",
+     "iopub.status.busy": "2020-12-17T02:15:10.902227Z",
+     "iopub.status.idle": "2020-12-17T02:15:11.647077Z",
+     "shell.execute_reply": "2020-12-17T02:15:11.646528Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -487,7 +571,14 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:15:11.651835Z",
+     "iopub.status.busy": "2020-12-17T02:15:11.651305Z",
+     "iopub.status.idle": "2020-12-17T02:15:13.892122Z",
+     "shell.execute_reply": "2020-12-17T02:15:13.892572Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -520,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
