--- a/NRPyPN/PN-dE_GW_dt_and_dM_dt.ipynb
+++ b/NRPyPN/PN-dE_GW_dt_and_dM_dt.ipynb
@@ -62,7 +62,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:14:42.632050Z",
+     "iopub.status.busy": "2020-12-17T02:14:42.631539Z",
+     "iopub.status.idle": "2020-12-17T02:14:42.802800Z",
+     "shell.execute_reply": "2020-12-17T02:14:42.803319Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 0: Add NRPy's directory to the path\n",
@@ -116,7 +123,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:14:42.811833Z",
+     "iopub.status.busy": "2020-12-17T02:14:42.811412Z",
+     "iopub.status.idle": "2020-12-17T02:14:42.813411Z",
+     "shell.execute_reply": "2020-12-17T02:14:42.813059Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Constants given in Eqs A1-13 of https://arxiv.org/abs/1502.01747\n",
@@ -207,7 +221,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:14:42.846938Z",
+     "iopub.status.busy": "2020-12-17T02:14:42.845105Z",
+     "iopub.status.idle": "2020-12-17T02:14:42.848467Z",
+     "shell.execute_reply": "2020-12-17T02:14:42.848794Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Based on Eqs A22-28 of https://arxiv.org/abs/1502.01747, with\n",
@@ -274,7 +295,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:14:42.860175Z",
+     "iopub.status.busy": "2020-12-17T02:14:42.859606Z",
+     "iopub.status.idle": "2020-12-17T02:14:42.861310Z",
+     "shell.execute_reply": "2020-12-17T02:14:42.861789Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Second version, used for validation purposes only.\n",
@@ -358,7 +386,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:14:42.867006Z",
+     "iopub.status.busy": "2020-12-17T02:14:42.866379Z",
+     "iopub.status.idle": "2020-12-17T02:14:44.566685Z",
+     "shell.execute_reply": "2020-12-17T02:14:44.566142Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -414,7 +449,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:14:44.570209Z",
+     "iopub.status.busy": "2020-12-17T02:14:44.569598Z",
+     "iopub.status.idle": "2020-12-17T02:14:46.821888Z",
+     "shell.execute_reply": "2020-12-17T02:14:46.821412Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -448,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
