--- a/Tutorial-ADMBSSN_tofrom_4metric.ipynb
+++ b/Tutorial-ADMBSSN_tofrom_4metric.ipynb
@@ -56,7 +56,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:00:49.889134Z",
+     "iopub.status.busy": "2020-12-17T02:00:49.888606Z",
+     "iopub.status.idle": "2020-12-17T02:00:50.055161Z",
+     "shell.execute_reply": "2020-12-17T02:00:50.055578Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import sympy as sp\n",
@@ -118,7 +125,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:00:50.062002Z",
+     "iopub.status.busy": "2020-12-17T02:00:50.061466Z",
+     "iopub.status.idle": "2020-12-17T02:00:50.062872Z",
+     "shell.execute_reply": "2020-12-17T02:00:50.063338Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def g4DD_ito_BSSN_or_ADM(inputvars):\n",
@@ -175,7 +189,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:00:50.068382Z",
+     "iopub.status.busy": "2020-12-17T02:00:50.067899Z",
+     "iopub.status.idle": "2020-12-17T02:00:50.069251Z",
+     "shell.execute_reply": "2020-12-17T02:00:50.069593Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def g4UU_ito_BSSN_or_ADM(inputvars):\n",
@@ -219,7 +240,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:00:50.073276Z",
+     "iopub.status.busy": "2020-12-17T02:00:50.072833Z",
+     "iopub.status.idle": "2020-12-17T02:00:51.654601Z",
+     "shell.execute_reply": "2020-12-17T02:00:51.655039Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -270,7 +298,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:00:51.663289Z",
+     "iopub.status.busy": "2020-12-17T02:00:51.662854Z",
+     "iopub.status.idle": "2020-12-17T02:00:51.664642Z",
+     "shell.execute_reply": "2020-12-17T02:00:51.664230Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def BSSN_or_ADM_ito_g4DD(inputvars):\n",
@@ -343,7 +378,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:00:51.701799Z",
+     "iopub.status.busy": "2020-12-17T02:00:51.681360Z",
+     "iopub.status.idle": "2020-12-17T02:00:51.919354Z",
+     "shell.execute_reply": "2020-12-17T02:00:51.918882Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -383,7 +425,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:00:51.946604Z",
+     "iopub.status.busy": "2020-12-17T02:00:51.931438Z",
+     "iopub.status.idle": "2020-12-17T02:00:54.348736Z",
+     "shell.execute_reply": "2020-12-17T02:00:54.349177Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -437,7 +486,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:00:54.381560Z",
+     "iopub.status.busy": "2020-12-17T02:00:54.366315Z",
+     "iopub.status.idle": "2020-12-17T02:00:57.476077Z",
+     "shell.execute_reply": "2020-12-17T02:00:57.475595Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -596,7 +652,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:00:57.478796Z",
+     "iopub.status.busy": "2020-12-17T02:00:57.478267Z",
+     "iopub.status.idle": "2020-12-17T02:00:59.730178Z",
+     "shell.execute_reply": "2020-12-17T02:00:59.730544Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -629,7 +692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
