--- a/Tutorial-BSSN-basis_transforms.ipynb
+++ b/Tutorial-BSSN-basis_transforms.ipynb
@@ -80,7 +80,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:51.235359Z",
+     "iopub.status.busy": "2020-12-17T02:07:51.234887Z",
+     "iopub.status.idle": "2020-12-17T02:07:52.071601Z",
+     "shell.execute_reply": "2020-12-17T02:07:52.072024Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step P1: Import needed NRPy+ core modules:\n",
@@ -169,7 +176,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:52.089299Z",
+     "iopub.status.busy": "2020-12-17T02:07:52.084163Z",
+     "iopub.status.idle": "2020-12-17T02:07:52.204653Z",
+     "shell.execute_reply": "2020-12-17T02:07:52.204179Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2: Transform source grid basis to Cartesian, using center of source grid as origin\n",
@@ -237,6 +251,12 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:52.226682Z",
+     "iopub.status.busy": "2020-12-17T02:07:52.211409Z",
+     "iopub.status.idle": "2020-12-17T02:07:52.891250Z",
+     "shell.execute_reply": "2020-12-17T02:07:52.890800Z"
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -275,7 +295,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:52.954376Z",
+     "iopub.status.busy": "2020-12-17T02:07:52.918525Z",
+     "iopub.status.idle": "2020-12-17T02:07:54.108723Z",
+     "shell.execute_reply": "2020-12-17T02:07:54.108247Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 4: Rescale all BSSN quantities\n",
@@ -344,6 +371,12 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:54.114972Z",
+     "iopub.status.busy": "2020-12-17T02:07:54.114429Z",
+     "iopub.status.idle": "2020-12-17T02:07:56.167274Z",
+     "shell.execute_reply": "2020-12-17T02:07:56.167034Z"
+    },
     "scrolled": true
    },
    "outputs": [
@@ -413,7 +446,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:56.194147Z",
+     "iopub.status.busy": "2020-12-17T02:07:56.183954Z",
+     "iopub.status.idle": "2020-12-17T02:08:00.491663Z",
+     "shell.execute_reply": "2020-12-17T02:08:00.491210Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -456,7 +496,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:00.494465Z",
+     "iopub.status.busy": "2020-12-17T02:08:00.493934Z",
+     "iopub.status.idle": "2020-12-17T02:08:02.743234Z",
+     "shell.execute_reply": "2020-12-17T02:08:02.743656Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -489,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
