--- a/Tutorial-BSSN_constraints.ipynb
+++ b/Tutorial-BSSN_constraints.ipynb
@@ -65,7 +65,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:04.157567Z",
+     "iopub.status.busy": "2020-12-17T02:08:04.157107Z",
+     "iopub.status.idle": "2020-12-17T02:08:04.563931Z",
+     "shell.execute_reply": "2020-12-17T02:08:04.563532Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 1: Initialize needed Python/NRPy+ modules\n",
@@ -110,7 +117,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:04.637916Z",
+     "iopub.status.busy": "2020-12-17T02:08:04.601773Z",
+     "iopub.status.idle": "2020-12-17T02:08:05.388327Z",
+     "shell.execute_reply": "2020-12-17T02:08:05.387874Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2: The Hamiltonian constraint.\n",
@@ -204,7 +218,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:05.411698Z",
+     "iopub.status.busy": "2020-12-17T02:08:05.411169Z",
+     "iopub.status.idle": "2020-12-17T02:08:05.412806Z",
+     "shell.execute_reply": "2020-12-17T02:08:05.413214Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 3: M^i, the momentum constraint\n",
@@ -241,7 +262,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:05.486725Z",
+     "iopub.status.busy": "2020-12-17T02:08:05.450809Z",
+     "iopub.status.idle": "2020-12-17T02:08:05.525708Z",
+     "shell.execute_reply": "2020-12-17T02:08:05.525241Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# First define aDD_dD:\n",
@@ -288,7 +316,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:05.529773Z",
+     "iopub.status.busy": "2020-12-17T02:08:05.529248Z",
+     "iopub.status.idle": "2020-12-17T02:08:07.011293Z",
+     "shell.execute_reply": "2020-12-17T02:08:07.010818Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -348,7 +383,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:07.014212Z",
+     "iopub.status.busy": "2020-12-17T02:08:07.013695Z",
+     "iopub.status.idle": "2020-12-17T02:08:09.264991Z",
+     "shell.execute_reply": "2020-12-17T02:08:09.264494Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -381,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
