--- a/Tutorial-BSSN_quantities.ipynb
+++ b/Tutorial-BSSN_quantities.ipynb
@@ -84,7 +84,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:23.447125Z",
+     "iopub.status.busy": "2020-12-17T02:08:23.446596Z",
+     "iopub.status.idle": "2020-12-17T02:08:23.855014Z",
+     "shell.execute_reply": "2020-12-17T02:08:23.854431Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 1: Import all needed modules from NRPy+:\n",
@@ -131,7 +138,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:23.872527Z",
+     "iopub.status.busy": "2020-12-17T02:08:23.867250Z",
+     "iopub.status.idle": "2020-12-17T02:08:23.874730Z",
+     "shell.execute_reply": "2020-12-17T02:08:23.874280Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2: Register all needed BSSN gridfunctions.\n",
@@ -264,7 +278,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:23.881102Z",
+     "iopub.status.busy": "2020-12-17T02:08:23.880564Z",
+     "iopub.status.idle": "2020-12-17T02:08:23.882487Z",
+     "shell.execute_reply": "2020-12-17T02:08:23.881988Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 3.a: Define all basic conformal BSSN tensors in terms of BSSN gridfunctions\n",
@@ -309,7 +330,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:23.900597Z",
+     "iopub.status.busy": "2020-12-17T02:08:23.894287Z",
+     "iopub.status.idle": "2020-12-17T02:08:23.902456Z",
+     "shell.execute_reply": "2020-12-17T02:08:23.902015Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 4.a: Inverse conformal 3-metric gammabarUU:\n",
@@ -341,7 +369,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:23.927178Z",
+     "iopub.status.busy": "2020-12-17T02:08:23.924275Z",
+     "iopub.status.idle": "2020-12-17T02:08:23.929049Z",
+     "shell.execute_reply": "2020-12-17T02:08:23.928626Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 4.b.i gammabarDDdD[i][j][k]\n",
@@ -376,7 +411,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:23.950878Z",
+     "iopub.status.busy": "2020-12-17T02:08:23.940587Z",
+     "iopub.status.idle": "2020-12-17T02:08:23.967528Z",
+     "shell.execute_reply": "2020-12-17T02:08:23.966886Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 4.b.ii: Compute gammabarDD_dDD in terms of the rescaled BSSN quantity hDD\n",
@@ -412,7 +454,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:23.987754Z",
+     "iopub.status.busy": "2020-12-17T02:08:23.979376Z",
+     "iopub.status.idle": "2020-12-17T02:08:23.989581Z",
+     "shell.execute_reply": "2020-12-17T02:08:23.989118Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 4.b.iii: Define barred Christoffel symbol \\bar{\\Gamma}^{i}_{kl} = GammabarUDD[i][k][l] (see expression below)\n",
@@ -454,7 +503,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:23.994532Z",
+     "iopub.status.busy": "2020-12-17T02:08:23.993994Z",
+     "iopub.status.idle": "2020-12-17T02:08:23.996150Z",
+     "shell.execute_reply": "2020-12-17T02:08:23.995601Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 5: det(gammabarDD) and its derivatives\n",
@@ -527,7 +583,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:24.038619Z",
+     "iopub.status.busy": "2020-12-17T02:08:24.023243Z",
+     "iopub.status.idle": "2020-12-17T02:08:24.053975Z",
+     "shell.execute_reply": "2020-12-17T02:08:24.053444Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 6: Quantities related to conformal traceless extrinsic curvature\n",
@@ -644,7 +707,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:24.081165Z",
+     "iopub.status.busy": "2020-12-17T02:08:24.070933Z",
+     "iopub.status.idle": "2020-12-17T02:08:24.094130Z",
+     "shell.execute_reply": "2020-12-17T02:08:24.093593Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 7: Conformal Ricci tensor, part 1: The \\hat{D}_{k} \\hat{D}_{l} \\bar{\\gamma}_{i j} term\n",
@@ -690,7 +760,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:24.129982Z",
+     "iopub.status.busy": "2020-12-17T02:08:24.114683Z",
+     "iopub.status.idle": "2020-12-17T02:08:24.170222Z",
+     "shell.execute_reply": "2020-12-17T02:08:24.169712Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 7.a.iv: DhatgammabarDDdD[i][j][l] = \\bar{\\gamma}_{ij;\\hat{l}}\n",
@@ -770,7 +847,14 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:24.182333Z",
+     "iopub.status.busy": "2020-12-17T02:08:24.181780Z",
+     "iopub.status.idle": "2020-12-17T02:08:24.183690Z",
+     "shell.execute_reply": "2020-12-17T02:08:24.183163Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 7.b: Second term of RhatDD: compute \\hat{D}_{j} \\bar{\\Lambda}^{k} = LambarU_dHatD[k][j]\n",
@@ -806,7 +890,14 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:24.191890Z",
+     "iopub.status.busy": "2020-12-17T02:08:24.191372Z",
+     "iopub.status.idle": "2020-12-17T02:08:24.193184Z",
+     "shell.execute_reply": "2020-12-17T02:08:24.192788Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 7.c: Conformal Ricci tensor, part 3: The \\Delta^{k} \\Delta_{(i j) k}\n",
@@ -838,7 +929,14 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:24.200146Z",
+     "iopub.status.busy": "2020-12-17T02:08:24.199716Z",
+     "iopub.status.idle": "2020-12-17T02:08:24.201475Z",
+     "shell.execute_reply": "2020-12-17T02:08:24.201059Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 7.c.iii: Define \\Delta_{ijk} = \\bar{\\gamma}_{im} \\Delta^m_{jk}\n",
@@ -870,7 +968,14 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:24.228422Z",
+     "iopub.status.busy": "2020-12-17T02:08:24.212995Z",
+     "iopub.status.idle": "2020-12-17T02:08:24.458544Z",
+     "shell.execute_reply": "2020-12-17T02:08:24.458084Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 7.d: Summing the terms and defining \\bar{R}_{ij}\n",
@@ -936,7 +1041,14 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:24.476270Z",
+     "iopub.status.busy": "2020-12-17T02:08:24.475736Z",
+     "iopub.status.idle": "2020-12-17T02:08:24.492029Z",
+     "shell.execute_reply": "2020-12-17T02:08:24.491576Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 8: The unrescaled shift vector betaU spatial derivatives:\n",
@@ -993,7 +1105,14 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:24.499793Z",
+     "iopub.status.busy": "2020-12-17T02:08:24.499273Z",
+     "iopub.status.idle": "2020-12-17T02:08:24.501095Z",
+     "shell.execute_reply": "2020-12-17T02:08:24.500579Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 9: Standard BSSN conformal factor phi,\n",
@@ -1022,7 +1141,14 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:24.504307Z",
+     "iopub.status.busy": "2020-12-17T02:08:24.503594Z",
+     "iopub.status.idle": "2020-12-17T02:08:24.505438Z",
+     "shell.execute_reply": "2020-12-17T02:08:24.504989Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 9.a.ii: Assuming cf=phi, define exp_m4phi, phi_dD,\n",
@@ -1052,7 +1178,14 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:24.520740Z",
+     "iopub.status.busy": "2020-12-17T02:08:24.520334Z",
+     "iopub.status.idle": "2020-12-17T02:08:24.522069Z",
+     "shell.execute_reply": "2020-12-17T02:08:24.521718Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 9.a.iii: Assuming cf=W=e^{-2 phi}, define exp_m4phi, phi_dD,\n",
@@ -1086,7 +1219,14 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:24.525514Z",
+     "iopub.status.busy": "2020-12-17T02:08:24.525108Z",
+     "iopub.status.idle": "2020-12-17T02:08:24.526894Z",
+     "shell.execute_reply": "2020-12-17T02:08:24.526481Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 9.a.iv: Assuming cf=chi=e^{-4 phi}, define exp_m4phi, phi_dD,\n",
@@ -1131,7 +1271,14 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:24.549603Z",
+     "iopub.status.busy": "2020-12-17T02:08:24.543559Z",
+     "iopub.status.idle": "2020-12-17T02:08:24.551453Z",
+     "shell.execute_reply": "2020-12-17T02:08:24.550933Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 9.b: Define phi_dBarD = phi_dD (since phi is a scalar) and phi_dBarDD (covariant derivative)\n",
@@ -1165,7 +1312,14 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:24.567023Z",
+     "iopub.status.busy": "2020-12-17T02:08:24.563616Z",
+     "iopub.status.idle": "2020-12-17T02:08:25.840020Z",
+     "shell.execute_reply": "2020-12-17T02:08:25.839543Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1314,7 +1468,14 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:08:25.842891Z",
+     "iopub.status.busy": "2020-12-17T02:08:25.842365Z",
+     "iopub.status.idle": "2020-12-17T02:08:29.295011Z",
+     "shell.execute_reply": "2020-12-17T02:08:29.295429Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1347,7 +1508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
