--- a/Tutorial-Coutput__Parameter_Interface.ipynb
+++ b/Tutorial-Coutput__Parameter_Interface.ipynb
@@ -64,7 +64,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:02.404963Z",
+     "iopub.status.busy": "2020-12-17T02:02:02.404414Z",
+     "iopub.status.idle": "2020-12-17T02:02:02.565218Z",
+     "shell.execute_reply": "2020-12-17T02:02:02.565682Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 1: Initialize core Python/NRPy+ modules\n",
@@ -88,7 +95,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:02.572026Z",
+     "iopub.status.busy": "2020-12-17T02:02:02.568714Z",
+     "iopub.status.idle": "2020-12-17T02:02:02.625748Z",
+     "shell.execute_reply": "2020-12-17T02:02:02.626221Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -96,7 +110,7 @@
        "'pow(b, 2)*sin(2*a) + c/sin(2*a)'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +142,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:02.629725Z",
+     "iopub.status.busy": "2020-12-17T02:02:02.629305Z",
+     "iopub.status.idle": "2020-12-17T02:02:02.631888Z",
+     "shell.execute_reply": "2020-12-17T02:02:02.631464Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -205,6 +226,12 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:02.638042Z",
+     "iopub.status.busy": "2020-12-17T02:02:02.637630Z",
+     "iopub.status.idle": "2020-12-17T02:02:02.639949Z",
+     "shell.execute_reply": "2020-12-17T02:02:02.639541Z"
+    },
     "scrolled": false
    },
    "outputs": [
@@ -249,14 +276,21 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:02.645736Z",
+     "iopub.status.busy": "2020-12-17T02:02:02.645330Z",
+     "iopub.status.idle": "2020-12-17T02:02:02.647699Z",
+     "shell.execute_reply": "2020-12-17T02:02:02.648038Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "/*\n",
-      "Output x(a,b,c) = b^2*sin(2*a) + c/sin(2*a)\n",
+      " * Output x(a,b,c) = b^2*sin(2*a) + c/sin(2*a)\n",
       " */\n",
       "void output_x_of_a_b_c(const double a,const double b,const double c, double *x) {\n",
       "\n",
@@ -328,7 +362,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:02.650788Z",
+     "iopub.status.busy": "2020-12-17T02:02:02.650301Z",
+     "iopub.status.idle": "2020-12-17T02:02:02.652310Z",
+     "shell.execute_reply": "2020-12-17T02:02:02.651925Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 4.a: NRPy_param_funcs: The NRPy+ Parameter Interface\n",
@@ -346,7 +387,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:02.654861Z",
+     "iopub.status.busy": "2020-12-17T02:02:02.654461Z",
+     "iopub.status.idle": "2020-12-17T02:02:02.656864Z",
+     "shell.execute_reply": "2020-12-17T02:02:02.656513Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -373,6 +421,12 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:02.659405Z",
+     "iopub.status.busy": "2020-12-17T02:02:02.659006Z",
+     "iopub.status.idle": "2020-12-17T02:02:02.661348Z",
+     "shell.execute_reply": "2020-12-17T02:02:02.660940Z"
+    },
     "scrolled": true
    },
    "outputs": [
@@ -419,7 +473,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:02.675904Z",
+     "iopub.status.busy": "2020-12-17T02:02:02.675500Z",
+     "iopub.status.idle": "2020-12-17T02:02:02.677757Z",
+     "shell.execute_reply": "2020-12-17T02:02:02.677382Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -476,7 +537,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:02.683703Z",
+     "iopub.status.busy": "2020-12-17T02:02:02.683284Z",
+     "iopub.status.idle": "2020-12-17T02:02:02.685486Z",
+     "shell.execute_reply": "2020-12-17T02:02:02.685074Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -516,7 +584,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:02.692051Z",
+     "iopub.status.busy": "2020-12-17T02:02:02.691650Z",
+     "iopub.status.idle": "2020-12-17T02:02:02.693998Z",
+     "shell.execute_reply": "2020-12-17T02:02:02.693592Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -559,7 +634,14 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:02.696377Z",
+     "iopub.status.busy": "2020-12-17T02:02:02.695971Z",
+     "iopub.status.idle": "2020-12-17T02:02:05.146162Z",
+     "shell.execute_reply": "2020-12-17T02:02:05.145606Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -592,7 +674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
