--- a/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
+++ b/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
@@ -69,7 +69,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:06.578756Z",
+     "iopub.status.busy": "2020-12-17T02:02:06.570052Z",
+     "iopub.status.idle": "2020-12-17T02:02:09.060558Z",
+     "shell.execute_reply": "2020-12-17T02:02:09.061063Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 1: Call on NRPy+ to convert the SymPy expression for the\n",
@@ -190,13 +197,20 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:09.064809Z",
+     "iopub.status.busy": "2020-12-17T02:02:09.064186Z",
+     "iopub.status.idle": "2020-12-17T02:02:09.067055Z",
+     "shell.execute_reply": "2020-12-17T02:02:09.067563Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing FishboneMoncriefID/src/InitialData.c\n"
+      "Overwriting FishboneMoncriefID/src/InitialData.c\n"
      ]
     }
    ],
@@ -280,7 +294,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:09.070730Z",
+     "iopub.status.busy": "2020-12-17T02:02:09.070446Z",
+     "iopub.status.idle": "2020-12-17T02:02:09.072509Z",
+     "shell.execute_reply": "2020-12-17T02:02:09.072759Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -423,13 +444,20 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:09.074876Z",
+     "iopub.status.busy": "2020-12-17T02:02:09.074613Z",
+     "iopub.status.idle": "2020-12-17T02:02:09.076842Z",
+     "shell.execute_reply": "2020-12-17T02:02:09.076608Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing FishboneMoncriefID/interface.ccl\n"
+      "Overwriting FishboneMoncriefID/interface.ccl\n"
      ]
     }
    ],
@@ -449,13 +477,20 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:09.079533Z",
+     "iopub.status.busy": "2020-12-17T02:02:09.079119Z",
+     "iopub.status.idle": "2020-12-17T02:02:09.081751Z",
+     "shell.execute_reply": "2020-12-17T02:02:09.081338Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing FishboneMoncriefID/param.ccl\n"
+      "Overwriting FishboneMoncriefID/param.ccl\n"
      ]
     }
    ],
@@ -567,13 +602,20 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:09.084431Z",
+     "iopub.status.busy": "2020-12-17T02:02:09.084014Z",
+     "iopub.status.idle": "2020-12-17T02:02:09.086667Z",
+     "shell.execute_reply": "2020-12-17T02:02:09.086308Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing FishboneMoncriefID/schedule.ccl\n"
+      "Overwriting FishboneMoncriefID/schedule.ccl\n"
      ]
     }
    ],
@@ -630,13 +672,20 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:09.089164Z",
+     "iopub.status.busy": "2020-12-17T02:02:09.088761Z",
+     "iopub.status.idle": "2020-12-17T02:02:09.091117Z",
+     "shell.execute_reply": "2020-12-17T02:02:09.090697Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing FishboneMoncriefID/src/make.code.defn\n"
+      "Overwriting FishboneMoncriefID/src/make.code.defn\n"
      ]
     }
    ],
@@ -661,7 +710,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:09.095031Z",
+     "iopub.status.busy": "2020-12-17T02:02:09.093307Z",
+     "iopub.status.idle": "2020-12-17T02:02:11.339522Z",
+     "shell.execute_reply": "2020-12-17T02:02:11.339969Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -694,7 +750,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
