--- a/Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb
+++ b/Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb
@@ -63,7 +63,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:12.777912Z",
+     "iopub.status.busy": "2020-12-17T02:02:12.763231Z",
+     "iopub.status.idle": "2020-12-17T02:02:13.266827Z",
+     "shell.execute_reply": "2020-12-17T02:02:13.266275Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 1: Call on NRPy+ to convert the SymPy expression\n",
@@ -176,13 +183,20 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:13.271796Z",
+     "iopub.status.busy": "2020-12-17T02:02:13.271256Z",
+     "iopub.status.idle": "2020-12-17T02:02:13.273827Z",
+     "shell.execute_reply": "2020-12-17T02:02:13.274262Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing MaxwellID/src/InitialData.c\n"
+      "Overwriting MaxwellID/src/InitialData.c\n"
      ]
     }
    ],
@@ -231,13 +245,20 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:13.277686Z",
+     "iopub.status.busy": "2020-12-17T02:02:13.277255Z",
+     "iopub.status.idle": "2020-12-17T02:02:13.279833Z",
+     "shell.execute_reply": "2020-12-17T02:02:13.279464Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing MaxwellID/interface.ccl\n"
+      "Overwriting MaxwellID/interface.ccl\n"
      ]
     }
    ],
@@ -257,13 +278,20 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:13.282735Z",
+     "iopub.status.busy": "2020-12-17T02:02:13.282318Z",
+     "iopub.status.idle": "2020-12-17T02:02:13.284270Z",
+     "shell.execute_reply": "2020-12-17T02:02:13.284605Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing MaxwellID/param.ccl\n"
+      "Overwriting MaxwellID/param.ccl\n"
      ]
     }
    ],
@@ -304,13 +332,20 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:13.287358Z",
+     "iopub.status.busy": "2020-12-17T02:02:13.286950Z",
+     "iopub.status.idle": "2020-12-17T02:02:13.288916Z",
+     "shell.execute_reply": "2020-12-17T02:02:13.289312Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing MaxwellID/schedule.ccl\n"
+      "Overwriting MaxwellID/schedule.ccl\n"
      ]
     }
    ],
@@ -364,13 +399,20 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:13.291906Z",
+     "iopub.status.busy": "2020-12-17T02:02:13.291507Z",
+     "iopub.status.idle": "2020-12-17T02:02:13.293800Z",
+     "shell.execute_reply": "2020-12-17T02:02:13.293437Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing MaxwellID/src/make.code.defn\n"
+      "Overwriting MaxwellID/src/make.code.defn\n"
      ]
     }
    ],
@@ -395,7 +437,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:13.296346Z",
+     "iopub.status.busy": "2020-12-17T02:02:13.295928Z",
+     "iopub.status.idle": "2020-12-17T02:02:15.545821Z",
+     "shell.execute_reply": "2020-12-17T02:02:15.545337Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -428,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
