--- a/Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb
+++ b/Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb
@@ -66,7 +66,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:16.970362Z",
+     "iopub.status.busy": "2020-12-17T02:02:16.969897Z",
+     "iopub.status.idle": "2020-12-17T02:02:17.162045Z",
+     "shell.execute_reply": "2020-12-17T02:02:17.161516Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 1: Import needed core NRPy+ modules\n",
@@ -119,7 +126,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:17.167406Z",
+     "iopub.status.busy": "2020-12-17T02:02:17.166863Z",
+     "iopub.status.idle": "2020-12-17T02:02:17.295749Z",
+     "shell.execute_reply": "2020-12-17T02:02:17.295258Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 1c: Call the InitialData() function from within the\n",
@@ -191,7 +205,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:17.299146Z",
+     "iopub.status.busy": "2020-12-17T02:02:17.298621Z",
+     "iopub.status.idle": "2020-12-17T02:02:17.300731Z",
+     "shell.execute_reply": "2020-12-17T02:02:17.300209Z"
+    }
+   },
    "outputs": [],
    "source": [
     "evol_gfs_list    = []\n",
@@ -226,7 +247,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:17.308925Z",
+     "iopub.status.busy": "2020-12-17T02:02:17.308437Z",
+     "iopub.status.idle": "2020-12-17T02:02:17.310271Z",
+     "shell.execute_reply": "2020-12-17T02:02:17.309860Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def keep_param__return_type(paramtuple):\n",
@@ -323,7 +351,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:17.312521Z",
+     "iopub.status.busy": "2020-12-17T02:02:17.312105Z",
+     "iopub.status.idle": "2020-12-17T02:02:17.313714Z",
+     "shell.execute_reply": "2020-12-17T02:02:17.314045Z"
+    }
+   },
    "outputs": [],
    "source": [
     "with open(os.path.join(outrootdir,\"schedule.ccl\"), \"w\") as file:\n",
@@ -364,7 +399,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:17.316454Z",
+     "iopub.status.busy": "2020-12-17T02:02:17.316030Z",
+     "iopub.status.idle": "2020-12-17T02:02:17.317942Z",
+     "shell.execute_reply": "2020-12-17T02:02:17.317527Z"
+    }
+   },
    "outputs": [],
    "source": [
     "make_code_defn_list = []\n",
@@ -377,7 +419,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:17.320548Z",
+     "iopub.status.busy": "2020-12-17T02:02:17.320125Z",
+     "iopub.status.idle": "2020-12-17T02:02:17.322284Z",
+     "shell.execute_reply": "2020-12-17T02:02:17.321875Z"
+    }
+   },
    "outputs": [],
    "source": [
     "with open(append_to_make_code_defn_list(\"InitialData.c\"),\"w\") as file:\n",
@@ -421,7 +470,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:17.325609Z",
+     "iopub.status.busy": "2020-12-17T02:02:17.325205Z",
+     "iopub.status.idle": "2020-12-17T02:02:17.327274Z",
+     "shell.execute_reply": "2020-12-17T02:02:17.326867Z"
+    }
+   },
    "outputs": [],
    "source": [
     "with open(os.path.join(outdir,\"make.code.defn\"), \"w\") as file:\n",
@@ -456,7 +512,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:17.331209Z",
+     "iopub.status.busy": "2020-12-17T02:02:17.329391Z",
+     "iopub.status.idle": "2020-12-17T02:02:18.371538Z",
+     "shell.execute_reply": "2020-12-17T02:02:18.372026Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -490,7 +553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
