--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -82,7 +82,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:34.423367Z",
+     "iopub.status.busy": "2020-12-17T02:02:34.422904Z",
+     "iopub.status.idle": "2020-12-17T02:02:34.427444Z",
+     "shell.execute_reply": "2020-12-17T02:02:34.426979Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
@@ -124,7 +131,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:34.430844Z",
+     "iopub.status.busy": "2020-12-17T02:02:34.430143Z",
+     "iopub.status.idle": "2020-12-17T02:02:34.433574Z",
+     "shell.execute_reply": "2020-12-17T02:02:34.433153Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -281,6 +295,12 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:34.436405Z",
+     "iopub.status.busy": "2020-12-17T02:02:34.435975Z",
+     "iopub.status.idle": "2020-12-17T02:02:34.438441Z",
+     "shell.execute_reply": "2020-12-17T02:02:34.438023Z"
+    },
     "scrolled": true
    },
    "outputs": [
@@ -345,7 +365,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:34.441228Z",
+     "iopub.status.busy": "2020-12-17T02:02:34.440817Z",
+     "iopub.status.idle": "2020-12-17T02:02:34.443216Z",
+     "shell.execute_reply": "2020-12-17T02:02:34.442844Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -426,7 +453,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:34.446158Z",
+     "iopub.status.busy": "2020-12-17T02:02:34.445739Z",
+     "iopub.status.idle": "2020-12-17T02:02:34.447763Z",
+     "shell.execute_reply": "2020-12-17T02:02:34.448112Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -511,7 +545,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:34.453900Z",
+     "iopub.status.busy": "2020-12-17T02:02:34.453376Z",
+     "iopub.status.idle": "2020-12-17T02:02:34.638340Z",
+     "shell.execute_reply": "2020-12-17T02:02:34.637947Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2 P0: Import needed NRPy+ modules/parameters\n",
@@ -567,7 +608,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:34.641014Z",
+     "iopub.status.busy": "2020-12-17T02:02:34.640471Z",
+     "iopub.status.idle": "2020-12-17T02:02:34.642448Z",
+     "shell.execute_reply": "2020-12-17T02:02:34.641892Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2.a:  Set up NRPy-based \"list_of_functions_to_interpolate.h\"\n",
@@ -611,7 +659,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:34.654080Z",
+     "iopub.status.busy": "2020-12-17T02:02:34.653524Z",
+     "iopub.status.idle": "2020-12-17T02:02:34.665143Z",
+     "shell.execute_reply": "2020-12-17T02:02:34.664705Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2.a.i: GRMHD quantities (*IN PROGRESS*)\n",
@@ -650,7 +705,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:34.670746Z",
+     "iopub.status.busy": "2020-12-17T02:02:34.670185Z",
+     "iopub.status.idle": "2020-12-17T02:02:35.008498Z",
+     "shell.execute_reply": "2020-12-17T02:02:35.007981Z"
+    }
+   },
    "outputs": [],
    "source": [
     "IGMvU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"IGMvU\")\n",
@@ -707,7 +769,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:35.033185Z",
+     "iopub.status.busy": "2020-12-17T02:02:35.025090Z",
+     "iopub.status.idle": "2020-12-17T02:02:35.043792Z",
+     "shell.execute_reply": "2020-12-17T02:02:35.043229Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2.a.ii: Compute all 10 components of the 4-metric g_{\\mu\\nu}\n",
@@ -775,7 +844,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:35.065857Z",
+     "iopub.status.busy": "2020-12-17T02:02:35.060748Z",
+     "iopub.status.idle": "2020-12-17T02:02:35.085363Z",
+     "shell.execute_reply": "2020-12-17T02:02:35.084806Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2.a.iii: Compute all 40 4-Christoffels \\Gamma^{\\mu}_{\\nu\\delta}\n",
@@ -832,7 +908,14 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:35.102434Z",
+     "iopub.status.busy": "2020-12-17T02:02:35.097091Z",
+     "iopub.status.idle": "2020-12-17T02:02:41.981596Z",
+     "shell.execute_reply": "2020-12-17T02:02:41.981125Z"
+    }
+   },
    "outputs": [],
    "source": [
     "Gamma4UDD = ixp.zerorank3(DIM=4)\n",
@@ -867,7 +950,14 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:41.985027Z",
+     "iopub.status.busy": "2020-12-17T02:02:41.984483Z",
+     "iopub.status.idle": "2020-12-17T02:02:41.986803Z",
+     "shell.execute_reply": "2020-12-17T02:02:41.986276Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -942,7 +1032,14 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:41.991880Z",
+     "iopub.status.busy": "2020-12-17T02:02:41.991347Z",
+     "iopub.status.idle": "2020-12-17T02:02:41.993459Z",
+     "shell.execute_reply": "2020-12-17T02:02:41.993030Z"
+    }
+   },
    "outputs": [],
    "source": [
     "with open(os.path.join(Ccodesdir,\"src\",\"get_gf_name.h\"), \"w\") as file:\n",
@@ -974,7 +1071,14 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:41.996475Z",
+     "iopub.status.busy": "2020-12-17T02:02:41.996036Z",
+     "iopub.status.idle": "2020-12-17T02:02:41.998141Z",
+     "shell.execute_reply": "2020-12-17T02:02:41.997768Z"
+    }
+   },
    "outputs": [],
    "source": [
     "with open(os.path.join(Ccodesdir,\"src\",\"define_NumInterpFunctions.h\"), \"w\") as file:\n",
@@ -984,7 +1088,14 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:42.000966Z",
+     "iopub.status.busy": "2020-12-17T02:02:42.000559Z",
+     "iopub.status.idle": "2020-12-17T02:02:42.003287Z",
+     "shell.execute_reply": "2020-12-17T02:02:42.002927Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1078,7 +1189,14 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:42.006020Z",
+     "iopub.status.busy": "2020-12-17T02:02:42.005615Z",
+     "iopub.status.idle": "2020-12-17T02:02:42.008310Z",
+     "shell.execute_reply": "2020-12-17T02:02:42.007870Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1111,7 +1229,14 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:42.011216Z",
+     "iopub.status.busy": "2020-12-17T02:02:42.010811Z",
+     "iopub.status.idle": "2020-12-17T02:02:42.013024Z",
+     "shell.execute_reply": "2020-12-17T02:02:42.013362Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1170,7 +1295,14 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:42.016023Z",
+     "iopub.status.busy": "2020-12-17T02:02:42.014946Z",
+     "iopub.status.idle": "2020-12-17T02:02:42.018315Z",
+     "shell.execute_reply": "2020-12-17T02:02:42.017961Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1310,7 +1442,14 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:42.021217Z",
+     "iopub.status.busy": "2020-12-17T02:02:42.020799Z",
+     "iopub.status.idle": "2020-12-17T02:02:42.023116Z",
+     "shell.execute_reply": "2020-12-17T02:02:42.022700Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1569,7 +1708,14 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:42.027546Z",
+     "iopub.status.busy": "2020-12-17T02:02:42.025391Z",
+     "iopub.status.idle": "2020-12-17T02:02:45.274796Z",
+     "shell.execute_reply": "2020-12-17T02:02:45.274348Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1603,7 +1749,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
