--- a/Tutorial-Loop_Generation_Cache_Blocking.ipynb
+++ b/Tutorial-Loop_Generation_Cache_Blocking.ipynb
@@ -70,7 +70,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:05:14.948976Z",
+     "iopub.status.busy": "2020-12-17T02:05:14.948264Z",
+     "iopub.status.idle": "2020-12-17T02:05:14.950378Z",
+     "shell.execute_reply": "2020-12-17T02:05:14.949878Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from loop import loop, simple_loop # Import NRPy+ module for loop generation"
@@ -91,7 +98,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:05:14.952736Z",
+     "iopub.status.busy": "2020-12-17T02:05:14.952284Z",
+     "iopub.status.idle": "2020-12-17T02:05:14.954406Z",
+     "shell.execute_reply": "2020-12-17T02:05:14.954780Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -117,7 +131,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:05:14.956990Z",
+     "iopub.status.busy": "2020-12-17T02:05:14.956641Z",
+     "iopub.status.idle": "2020-12-17T02:05:14.958324Z",
+     "shell.execute_reply": "2020-12-17T02:05:14.958543Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -143,7 +164,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:05:14.960727Z",
+     "iopub.status.busy": "2020-12-17T02:05:14.960464Z",
+     "iopub.status.idle": "2020-12-17T02:05:14.962268Z",
+     "shell.execute_reply": "2020-12-17T02:05:14.962484Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -173,7 +201,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:05:14.964647Z",
+     "iopub.status.busy": "2020-12-17T02:05:14.964390Z",
+     "iopub.status.idle": "2020-12-17T02:05:14.966481Z",
+     "shell.execute_reply": "2020-12-17T02:05:14.966211Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -202,7 +237,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:05:14.968802Z",
+     "iopub.status.busy": "2020-12-17T02:05:14.968397Z",
+     "iopub.status.idle": "2020-12-17T02:05:14.970726Z",
+     "shell.execute_reply": "2020-12-17T02:05:14.970314Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -231,7 +273,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:05:14.973189Z",
+     "iopub.status.busy": "2020-12-17T02:05:14.972787Z",
+     "iopub.status.idle": "2020-12-17T02:05:14.974990Z",
+     "shell.execute_reply": "2020-12-17T02:05:14.974577Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -268,7 +317,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:05:14.977539Z",
+     "iopub.status.busy": "2020-12-17T02:05:14.977143Z",
+     "iopub.status.idle": "2020-12-17T02:05:14.979520Z",
+     "shell.execute_reply": "2020-12-17T02:05:14.979867Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -289,7 +345,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:05:14.982617Z",
+     "iopub.status.busy": "2020-12-17T02:05:14.982212Z",
+     "iopub.status.idle": "2020-12-17T02:05:14.984498Z",
+     "shell.execute_reply": "2020-12-17T02:05:14.984058Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -337,7 +400,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:05:14.986764Z",
+     "iopub.status.busy": "2020-12-17T02:05:14.986365Z",
+     "iopub.status.idle": "2020-12-17T02:05:14.988313Z",
+     "shell.execute_reply": "2020-12-17T02:05:14.987888Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Write Solution Here"
@@ -359,6 +429,12 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:05:14.992106Z",
+     "iopub.status.busy": "2020-12-17T02:05:14.991685Z",
+     "iopub.status.idle": "2020-12-17T02:05:14.994201Z",
+     "shell.execute_reply": "2020-12-17T02:05:14.993846Z"
+    },
     "scrolled": true
    },
    "outputs": [
@@ -423,7 +499,14 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:05:14.996727Z",
+     "iopub.status.busy": "2020-12-17T02:05:14.996325Z",
+     "iopub.status.idle": "2020-12-17T02:05:17.234674Z",
+     "shell.execute_reply": "2020-12-17T02:05:17.235093Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -457,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.1"
   },
   "mimetype": "text/x-python",
   "name": "python",
