--- a/Tutorial-Method_of_Lines-C_Code_Generation.ipynb
+++ b/Tutorial-Method_of_Lines-C_Code_Generation.ipynb
@@ -88,7 +88,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:05:30.060208Z",
+     "iopub.status.busy": "2020-12-17T02:05:30.059728Z",
+     "iopub.status.idle": "2020-12-17T02:05:30.268616Z",
+     "shell.execute_reply": "2020-12-17T02:05:30.268112Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import sympy as sp  # Import SymPy, a computer algebra system written entirely in Python\n",
@@ -134,6 +141,12 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:05:30.274587Z",
+     "iopub.status.busy": "2020-12-17T02:05:30.274052Z",
+     "iopub.status.idle": "2020-12-17T02:05:30.277263Z",
+     "shell.execute_reply": "2020-12-17T02:05:30.276833Z"
+    },
     "scrolled": true
    },
    "outputs": [
@@ -196,7 +209,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:05:30.279705Z",
+     "iopub.status.busy": "2020-12-17T02:05:30.279292Z",
+     "iopub.status.idle": "2020-12-17T02:05:30.281606Z",
+     "shell.execute_reply": "2020-12-17T02:05:30.281256Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Choose a method to see the C code print out for\n",
@@ -218,7 +238,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:05:30.285922Z",
+     "iopub.status.busy": "2020-12-17T02:05:30.285496Z",
+     "iopub.status.idle": "2020-12-17T02:05:30.287252Z",
+     "shell.execute_reply": "2020-12-17T02:05:30.287575Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 3.a: When allocating memory, we populate a list malloced_gridfunctions,\n",
@@ -248,7 +275,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:05:30.305528Z",
+     "iopub.status.busy": "2020-12-17T02:05:30.295159Z",
+     "iopub.status.idle": "2020-12-17T02:05:30.323163Z",
+     "shell.execute_reply": "2020-12-17T02:05:30.322638Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -606,7 +640,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:05:30.328308Z",
+     "iopub.status.busy": "2020-12-17T02:05:30.327778Z",
+     "iopub.status.idle": "2020-12-17T02:05:30.390928Z",
+     "shell.execute_reply": "2020-12-17T02:05:30.390415Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -673,7 +714,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:05:30.393379Z",
+     "iopub.status.busy": "2020-12-17T02:05:30.392873Z",
+     "iopub.status.idle": "2020-12-17T02:05:32.640445Z",
+     "shell.execute_reply": "2020-12-17T02:05:32.640964Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -706,7 +754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
