--- a/Tutorial-SpinWeighted_Spherical_Harmonics.ipynb
+++ b/Tutorial-SpinWeighted_Spherical_Harmonics.ipynb
@@ -64,7 +64,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:10:33.443004Z",
+     "iopub.status.busy": "2020-12-17T02:10:33.442532Z",
+     "iopub.status.idle": "2020-12-17T02:10:33.602149Z",
+     "shell.execute_reply": "2020-12-17T02:10:33.601743Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 1: Initialize needed Python/NRPy+ modules\n",
@@ -94,7 +101,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:10:33.607382Z",
+     "iopub.status.busy": "2020-12-17T02:10:33.606953Z",
+     "iopub.status.idle": "2020-12-17T02:10:33.608728Z",
+     "shell.execute_reply": "2020-12-17T02:10:33.608378Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2: Defining the Goldberg function\n",
@@ -136,6 +150,12 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:10:33.612132Z",
+     "iopub.status.busy": "2020-12-17T02:10:33.611699Z",
+     "iopub.status.idle": "2020-12-17T02:10:33.613683Z",
+     "shell.execute_reply": "2020-12-17T02:10:33.613251Z"
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -165,7 +185,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:10:33.641321Z",
+     "iopub.status.busy": "2020-12-17T02:10:33.618794Z",
+     "iopub.status.idle": "2020-12-17T02:10:35.746658Z",
+     "shell.execute_reply": "2020-12-17T02:10:35.746182Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 4: Generating C Code function for computing\n",
@@ -217,7 +244,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:10:35.750713Z",
+     "iopub.status.busy": "2020-12-17T02:10:35.750170Z",
+     "iopub.status.idle": "2020-12-17T02:10:37.259503Z",
+     "shell.execute_reply": "2020-12-17T02:10:37.259949Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -262,7 +296,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:10:37.262775Z",
+     "iopub.status.busy": "2020-12-17T02:10:37.262239Z",
+     "iopub.status.idle": "2020-12-17T02:10:39.513725Z",
+     "shell.execute_reply": "2020-12-17T02:10:39.513265Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -295,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
