--- a/Tutorial-Symbolic_Tensor_Rotation.ipynb
+++ b/Tutorial-Symbolic_Tensor_Rotation.ipynb
@@ -125,7 +125,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:10:40.917456Z",
+     "iopub.status.busy": "2020-12-17T02:10:40.916783Z",
+     "iopub.status.idle": "2020-12-17T02:10:41.081670Z",
+     "shell.execute_reply": "2020-12-17T02:10:41.081123Z"
+    }
+   },
    "outputs": [],
    "source": [
     "\"\"\" Symbolic Tensor (Quaternion) Rotation\n",
@@ -205,7 +212,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:10:41.093281Z",
+     "iopub.status.busy": "2020-12-17T02:10:41.092749Z",
+     "iopub.status.idle": "2020-12-17T02:10:41.095467Z",
+     "shell.execute_reply": "2020-12-17T02:10:41.095894Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -216,7 +230,7 @@
        "<IPython.core.display.Math object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +255,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:10:41.103920Z",
+     "iopub.status.busy": "2020-12-17T02:10:41.103432Z",
+     "iopub.status.idle": "2020-12-17T02:10:41.152632Z",
+     "shell.execute_reply": "2020-12-17T02:10:41.152070Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -252,7 +273,7 @@
        "<IPython.core.display.Math object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +295,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:10:41.159621Z",
+     "iopub.status.busy": "2020-12-17T02:10:41.159098Z",
+     "iopub.status.idle": "2020-12-17T02:10:41.161331Z",
+     "shell.execute_reply": "2020-12-17T02:10:41.160940Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -285,7 +313,7 @@
        "<IPython.core.display.Math object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +335,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:10:41.170788Z",
+     "iopub.status.busy": "2020-12-17T02:10:41.170347Z",
+     "iopub.status.idle": "2020-12-17T02:10:41.172666Z",
+     "shell.execute_reply": "2020-12-17T02:10:41.173025Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -318,7 +353,7 @@
        "<IPython.core.display.Math object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +387,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:10:41.177586Z",
+     "iopub.status.busy": "2020-12-17T02:10:41.177189Z",
+     "iopub.status.idle": "2020-12-17T02:10:41.292616Z",
+     "shell.execute_reply": "2020-12-17T02:10:41.292143Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -363,7 +405,7 @@
        "<IPython.core.display.Math object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +432,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:10:41.320157Z",
+     "iopub.status.busy": "2020-12-17T02:10:41.304556Z",
+     "iopub.status.idle": "2020-12-17T02:10:53.274341Z",
+     "shell.execute_reply": "2020-12-17T02:10:53.274781Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -425,7 +474,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:10:53.353594Z",
+     "iopub.status.busy": "2020-12-17T02:10:53.317782Z",
+     "iopub.status.idle": "2020-12-17T02:10:53.373366Z",
+     "shell.execute_reply": "2020-12-17T02:10:53.372895Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -436,7 +492,7 @@
        "<IPython.core.display.Math object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +518,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:10:53.376141Z",
+     "iopub.status.busy": "2020-12-17T02:10:53.375597Z",
+     "iopub.status.idle": "2020-12-17T02:10:55.627849Z",
+     "shell.execute_reply": "2020-12-17T02:10:55.627328Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -496,7 +559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   },
   "mimetype": "text/x-python",
   "name": "python",
