--- a/Tutorial-Template_Style_Guide.ipynb
+++ b/Tutorial-Template_Style_Guide.ipynb
@@ -141,7 +141,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:37.702646Z",
+     "iopub.status.busy": "2020-12-17T02:06:37.702134Z",
+     "iopub.status.idle": "2020-12-17T02:06:37.704352Z",
+     "shell.execute_reply": "2020-12-17T02:06:37.704730Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -171,7 +178,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:37.707121Z",
+     "iopub.status.busy": "2020-12-17T02:06:37.706671Z",
+     "iopub.status.idle": "2020-12-17T02:06:37.708763Z",
+     "shell.execute_reply": "2020-12-17T02:06:37.708318Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -202,7 +216,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:37.710914Z",
+     "iopub.status.busy": "2020-12-17T02:06:37.710516Z",
+     "iopub.status.idle": "2020-12-17T02:06:37.712420Z",
+     "shell.execute_reply": "2020-12-17T02:06:37.712154Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -239,7 +260,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:37.714641Z",
+     "iopub.status.busy": "2020-12-17T02:06:37.714357Z",
+     "iopub.status.idle": "2020-12-17T02:06:39.955436Z",
+     "shell.execute_reply": "2020-12-17T02:06:39.954887Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -272,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
