--- a/Tutorial-WeylScalarsInvariants-Cartesian.ipynb
+++ b/Tutorial-WeylScalarsInvariants-Cartesian.ipynb
@@ -69,7 +69,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:40.578397Z",
+     "iopub.status.busy": "2020-12-17T02:07:40.577930Z",
+     "iopub.status.idle": "2020-12-17T02:07:40.742587Z",
+     "shell.execute_reply": "2020-12-17T02:07:40.742080Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 1: import all needed modules from NRPy+:\n",
@@ -83,7 +90,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:40.745685Z",
+     "iopub.status.busy": "2020-12-17T02:07:40.745151Z",
+     "iopub.status.idle": "2020-12-17T02:07:40.747279Z",
+     "shell.execute_reply": "2020-12-17T02:07:40.746812Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2: Initialize WeylScalar parameters\n",
@@ -118,7 +132,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:40.763709Z",
+     "iopub.status.busy": "2020-12-17T02:07:40.763162Z",
+     "iopub.status.idle": "2020-12-17T02:07:40.765307Z",
+     "shell.execute_reply": "2020-12-17T02:07:40.764762Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 3.a: Set spatial dimension (must be 3 for BSSN)\n",
@@ -185,7 +206,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:40.796267Z",
+     "iopub.status.busy": "2020-12-17T02:07:40.795551Z",
+     "iopub.status.idle": "2020-12-17T02:07:41.518172Z",
+     "shell.execute_reply": "2020-12-17T02:07:41.517643Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 4: Set which tetrad is used; at the moment, only one supported option\n",
@@ -325,7 +353,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:41.542352Z",
+     "iopub.status.busy": "2020-12-17T02:07:41.541823Z",
+     "iopub.status.idle": "2020-12-17T02:07:41.543838Z",
+     "shell.execute_reply": "2020-12-17T02:07:41.543361Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#Step 5: Declare and construct the second derivative of the metric.\n",
@@ -356,7 +391,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:41.617071Z",
+     "iopub.status.busy": "2020-12-17T02:07:41.581227Z",
+     "iopub.status.idle": "2020-12-17T02:07:41.703036Z",
+     "shell.execute_reply": "2020-12-17T02:07:41.702590Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 6.a: Declare and construct the Riemann curvature tensor:\n",
@@ -390,7 +432,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:41.708215Z",
+     "iopub.status.busy": "2020-12-17T02:07:41.707666Z",
+     "iopub.status.idle": "2020-12-17T02:07:41.709682Z",
+     "shell.execute_reply": "2020-12-17T02:07:41.709153Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 6.b: We also need the extrinsic curvature tensor $K_{ij}$. This can be built from quantities from BSSN_RHSs\n",
@@ -450,7 +499,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:41.727483Z",
+     "iopub.status.busy": "2020-12-17T02:07:41.727052Z",
+     "iopub.status.idle": "2020-12-17T02:07:41.728984Z",
+     "shell.execute_reply": "2020-12-17T02:07:41.728559Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 7: Build the formula for \\psi_4.\n",
@@ -475,7 +531,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:41.753736Z",
+     "iopub.status.busy": "2020-12-17T02:07:41.753190Z",
+     "iopub.status.idle": "2020-12-17T02:07:41.755329Z",
+     "shell.execute_reply": "2020-12-17T02:07:41.754787Z"
+    }
+   },
    "outputs": [],
    "source": [
     "3# Codazzi equation: involving partial derivatives of the extrinsic curvature.\n",
@@ -508,7 +571,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:41.785934Z",
+     "iopub.status.busy": "2020-12-17T02:07:41.785397Z",
+     "iopub.status.idle": "2020-12-17T02:07:41.787389Z",
+     "shell.execute_reply": "2020-12-17T02:07:41.786846Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Another piece. While not associated with any particular equation,\n",
@@ -569,7 +639,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:41.860618Z",
+     "iopub.status.busy": "2020-12-17T02:07:41.824848Z",
+     "iopub.status.idle": "2020-12-17T02:07:41.960200Z",
+     "shell.execute_reply": "2020-12-17T02:07:41.959648Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Now we can calculate $\\psi_4$ itself!\n",
@@ -616,7 +693,14 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:42.023555Z",
+     "iopub.status.busy": "2020-12-17T02:07:41.987727Z",
+     "iopub.status.idle": "2020-12-17T02:07:42.188026Z",
+     "shell.execute_reply": "2020-12-17T02:07:42.187556Z"
+    }
+   },
    "outputs": [],
    "source": [
     "for l in range(3):\n",
@@ -653,7 +737,14 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:42.264267Z",
+     "iopub.status.busy": "2020-12-17T02:07:42.226426Z",
+     "iopub.status.idle": "2020-12-17T02:07:42.610374Z",
+     "shell.execute_reply": "2020-12-17T02:07:42.609830Z"
+    }
+   },
    "outputs": [],
    "source": [
     "for l in range(3):\n",
@@ -690,7 +781,14 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:42.614401Z",
+     "iopub.status.busy": "2020-12-17T02:07:42.613865Z",
+     "iopub.status.idle": "2020-12-17T02:07:45.385578Z",
+     "shell.execute_reply": "2020-12-17T02:07:45.385023Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -760,7 +858,14 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:45.455956Z",
+     "iopub.status.busy": "2020-12-17T02:07:45.423633Z",
+     "iopub.status.idle": "2020-12-17T02:07:45.457566Z",
+     "shell.execute_reply": "2020-12-17T02:07:45.457113Z"
+    }
+   },
    "outputs": [],
    "source": [
     "gri.glb_gridfcs_list = []\n",
@@ -796,7 +901,14 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:45.567139Z",
+     "iopub.status.busy": "2020-12-17T02:07:45.530641Z",
+     "iopub.status.idle": "2020-12-17T02:07:45.672747Z",
+     "shell.execute_reply": "2020-12-17T02:07:45.672299Z"
+    }
+   },
    "outputs": [],
    "source": [
     "J1curv =-16*(3*psi2i**2-3*psi2r**2-4*psi1i*psi3i+4*psi1r*psi3r+psi0i*psi4i-psi0r*psi4r)\n",
@@ -881,7 +993,14 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:45.677264Z",
+     "iopub.status.busy": "2020-12-17T02:07:45.676729Z",
+     "iopub.status.idle": "2020-12-17T02:07:45.692595Z",
+     "shell.execute_reply": "2020-12-17T02:07:45.692083Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -935,8 +1054,24 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:45.695462Z",
+     "iopub.status.busy": "2020-12-17T02:07:45.694932Z",
+     "iopub.status.idle": "2020-12-17T02:07:48.951461Z",
+     "shell.execute_reply": "2020-12-17T02:07:48.950977Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created Tutorial-WeylScalarsInvariants-Cartesian.tex, and compiled LaTeX\n",
+      "    file to PDF file Tutorial-WeylScalarsInvariants-Cartesian.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-WeylScalarsInvariants-Cartesian\")"
@@ -959,7 +1094,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
