--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb
@@ -74,7 +74,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:16:54.781882Z",
+     "iopub.status.busy": "2020-12-17T02:16:54.781286Z",
+     "iopub.status.idle": "2020-12-17T02:16:54.971060Z",
+     "shell.execute_reply": "2020-12-17T02:16:54.970515Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import os, sys           # Standard Python modules for multiplatform OS-level functions\n",
@@ -133,7 +140,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:16:54.975707Z",
+     "iopub.status.busy": "2020-12-17T02:16:54.975188Z",
+     "iopub.status.idle": "2020-12-17T02:16:54.977320Z",
+     "shell.execute_reply": "2020-12-17T02:16:54.976799Z"
+    }
+   },
    "outputs": [],
    "source": [
     "if not Use_Gaussian_Data:\n",
@@ -172,7 +186,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:16:54.985220Z",
+     "iopub.status.busy": "2020-12-17T02:16:54.984808Z",
+     "iopub.status.idle": "2020-12-17T02:16:55.036211Z",
+     "shell.execute_reply": "2020-12-17T02:16:55.035860Z"
+    }
+   },
    "outputs": [],
    "source": [
     "if Use_Gaussian_Data:\n",
@@ -214,7 +235,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:16:55.057140Z",
+     "iopub.status.busy": "2020-12-17T02:16:55.052932Z",
+     "iopub.status.idle": "2020-12-17T02:16:55.171891Z",
+     "shell.execute_reply": "2020-12-17T02:16:55.172338Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -278,7 +306,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:16:55.209679Z",
+     "iopub.status.busy": "2020-12-17T02:16:55.194509Z",
+     "iopub.status.idle": "2020-12-17T02:16:55.280378Z",
+     "shell.execute_reply": "2020-12-17T02:16:55.279850Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -319,7 +354,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:16:55.308610Z",
+     "iopub.status.busy": "2020-12-17T02:16:55.308194Z",
+     "iopub.status.idle": "2020-12-17T02:16:55.399095Z",
+     "shell.execute_reply": "2020-12-17T02:16:55.398580Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -368,7 +410,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:16:55.402267Z",
+     "iopub.status.busy": "2020-12-17T02:16:55.401744Z",
+     "iopub.status.idle": "2020-12-17T02:16:55.404647Z",
+     "shell.execute_reply": "2020-12-17T02:16:55.404129Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 3.d.i: Generate declare_Cparameters_struct.h, set_Cparameters_default.h, and set_Cparameters[-SIMD].h\n",
@@ -418,13 +467,20 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:16:55.407999Z",
+     "iopub.status.busy": "2020-12-17T02:16:55.407596Z",
+     "iopub.status.idle": "2020-12-17T02:16:55.410380Z",
+     "shell.execute_reply": "2020-12-17T02:16:55.409999Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting Validation//A2B_unit_test.c\n"
+      "Writing Validation//A2B_unit_test.c\n"
      ]
     }
    ],
@@ -465,7 +521,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:16:55.413197Z",
+     "iopub.status.busy": "2020-12-17T02:16:55.412792Z",
+     "iopub.status.idle": "2020-12-17T02:16:55.415433Z",
+     "shell.execute_reply": "2020-12-17T02:16:55.415024Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -509,7 +572,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:16:55.418133Z",
+     "iopub.status.busy": "2020-12-17T02:16:55.417732Z",
+     "iopub.status.idle": "2020-12-17T02:16:55.420010Z",
+     "shell.execute_reply": "2020-12-17T02:16:55.419603Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -540,7 +610,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:16:55.423541Z",
+     "iopub.status.busy": "2020-12-17T02:16:55.423103Z",
+     "iopub.status.idle": "2020-12-17T02:16:55.425707Z",
+     "shell.execute_reply": "2020-12-17T02:16:55.425298Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -726,6 +803,12 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:16:55.431985Z",
+     "iopub.status.busy": "2020-12-17T02:16:55.431578Z",
+     "iopub.status.idle": "2020-12-17T02:16:56.282616Z",
+     "shell.execute_reply": "2020-12-17T02:16:56.282059Z"
+    },
     "scrolled": false
    },
    "outputs": [
@@ -737,18 +820,18 @@
       "\n",
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/A2B_unit_test.c -o Validation/A2B_unit_test -lm`...\n",
-      "(BENCH): Finished executing in 0.409120798111 seconds.\n",
+      "(BENCH): Finished executing in 0.40970373153686523 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 0.418399095535 seconds.\n",
+      "Finished in 0.41938018798828125 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Validation/A2B_unit_test 1 1 1 1`...\n",
-      "(BENCH): Finished executing in 0.208766937256 seconds.\n",
+      "(BENCH): Finished executing in 0.20781230926513672 seconds.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Validation/A2B_unit_test 7 7 7 1`...\n",
-      "(BENCH): Finished executing in 0.207701206207 seconds.\n",
-      "Finished in 0.431040048599 seconds.\n",
+      "(BENCH): Finished executing in 0.2084641456604004 seconds.\n",
+      "Finished in 0.42977237701416016 seconds.\n",
       "\n",
       "\n"
      ]
@@ -798,7 +881,14 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:16:56.298754Z",
+     "iopub.status.busy": "2020-12-17T02:16:56.289966Z",
+     "iopub.status.idle": "2020-12-17T02:16:56.523007Z",
+     "shell.execute_reply": "2020-12-17T02:16:56.522584Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -955,7 +1045,14 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:16:56.527340Z",
+     "iopub.status.busy": "2020-12-17T02:16:56.525149Z",
+     "iopub.status.idle": "2020-12-17T02:16:59.584744Z",
+     "shell.execute_reply": "2020-12-17T02:16:59.585172Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -977,19 +1074,19 @@
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.17"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
