--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb
@@ -75,7 +75,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:30.669558Z",
+     "iopub.status.busy": "2020-12-17T02:17:30.666842Z",
+     "iopub.status.idle": "2020-12-17T02:17:30.891124Z",
+     "shell.execute_reply": "2020-12-17T02:17:30.890573Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import shutil, os, sys           # Standard Python modules for multiplatform OS-level functions\n",
@@ -145,7 +152,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:30.915117Z",
+     "iopub.status.busy": "2020-12-17T02:17:30.914570Z",
+     "iopub.status.idle": "2020-12-17T02:17:30.946811Z",
+     "shell.execute_reply": "2020-12-17T02:17:30.946363Z"
+    }
+   },
    "outputs": [],
    "source": [
     "a,b,c,d,e,f,g,h,l,m,n,o,p,q,r,s,t,u = par.Cparameters(\"REAL\",thismodule,[\"a\",\"b\",\"c\",\"d\",\"e\",\"f\",\"g\",\"h\",\"l\",\"m\",\"n\",\"o\",\"p\",\"q\",\"r\",\"s\",\"t\",\"u\"],1e300)\n",
@@ -200,7 +214,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:30.994343Z",
+     "iopub.status.busy": "2020-12-17T02:17:30.968915Z",
+     "iopub.status.idle": "2020-12-17T02:17:31.010903Z",
+     "shell.execute_reply": "2020-12-17T02:17:31.010405Z"
+    }
+   },
    "outputs": [],
    "source": [
     "AD = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"AD\")\n",
@@ -245,6 +266,12 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:31.064014Z",
+     "iopub.status.busy": "2020-12-17T02:17:31.038229Z",
+     "iopub.status.idle": "2020-12-17T02:17:31.327363Z",
+     "shell.execute_reply": "2020-12-17T02:17:31.326890Z"
+    },
     "scrolled": true
    },
    "outputs": [
@@ -327,7 +354,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:31.365134Z",
+     "iopub.status.busy": "2020-12-17T02:17:31.339810Z",
+     "iopub.status.idle": "2020-12-17T02:17:31.526245Z",
+     "shell.execute_reply": "2020-12-17T02:17:31.525769Z"
+    }
+   },
    "outputs": [],
    "source": [
     "gammaDD_dD = ixp.zerorank3()\n",
@@ -386,7 +420,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:31.563747Z",
+     "iopub.status.busy": "2020-12-17T02:17:31.543423Z",
+     "iopub.status.idle": "2020-12-17T02:17:31.638063Z",
+     "shell.execute_reply": "2020-12-17T02:17:31.637558Z"
+    }
+   },
    "outputs": [],
    "source": [
     "Phi_dD = ixp.zerorank1()\n",
@@ -420,7 +461,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:31.680839Z",
+     "iopub.status.busy": "2020-12-17T02:17:31.660256Z",
+     "iopub.status.idle": "2020-12-17T02:17:31.982857Z",
+     "shell.execute_reply": "2020-12-17T02:17:31.982362Z"
+    }
+   },
    "outputs": [],
    "source": [
     "psi6Phi_dD = ixp.zerorank1()\n",
@@ -456,7 +504,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:32.005177Z",
+     "iopub.status.busy": "2020-12-17T02:17:31.994993Z",
+     "iopub.status.idle": "2020-12-17T02:17:53.984002Z",
+     "shell.execute_reply": "2020-12-17T02:17:53.983521Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -505,7 +560,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:53.996950Z",
+     "iopub.status.busy": "2020-12-17T02:17:53.996529Z",
+     "iopub.status.idle": "2020-12-17T02:17:54.625054Z",
+     "shell.execute_reply": "2020-12-17T02:17:54.624497Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -545,7 +607,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:54.652803Z",
+     "iopub.status.busy": "2020-12-17T02:17:54.647207Z",
+     "iopub.status.idle": "2020-12-17T02:17:54.727740Z",
+     "shell.execute_reply": "2020-12-17T02:17:54.727198Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -591,7 +660,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:54.755022Z",
+     "iopub.status.busy": "2020-12-17T02:17:54.744814Z",
+     "iopub.status.idle": "2020-12-17T02:17:54.787884Z",
+     "shell.execute_reply": "2020-12-17T02:17:54.787341Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -655,7 +731,14 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:54.791020Z",
+     "iopub.status.busy": "2020-12-17T02:17:54.790486Z",
+     "iopub.status.idle": "2020-12-17T02:17:54.792926Z",
+     "shell.execute_reply": "2020-12-17T02:17:54.792433Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 3.d.i: Generate declare_Cparameters_struct.h, set_Cparameters_default.h, and set_Cparameters[-SIMD].h\n",
@@ -699,7 +782,14 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:54.795325Z",
+     "iopub.status.busy": "2020-12-17T02:17:54.794908Z",
+     "iopub.status.idle": "2020-12-17T02:17:54.796724Z",
+     "shell.execute_reply": "2020-12-17T02:17:54.797136Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import GiRaFFE_NRPy.GiRaFFE_NRPy_Metric_Face_Values as FCVAL\n",
@@ -719,13 +809,20 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:54.801374Z",
+     "iopub.status.busy": "2020-12-17T02:17:54.800922Z",
+     "iopub.status.idle": "2020-12-17T02:17:54.803475Z",
+     "shell.execute_reply": "2020-12-17T02:17:54.803121Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting Validation//Stilde_source_A_gauge_Phi_rhs_unit_test.c\n"
+      "Writing Validation//Stilde_source_A_gauge_Phi_rhs_unit_test.c\n"
      ]
     }
    ],
@@ -926,7 +1023,14 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:54.809579Z",
+     "iopub.status.busy": "2020-12-17T02:17:54.809169Z",
+     "iopub.status.idle": "2020-12-17T02:17:56.061662Z",
+     "shell.execute_reply": "2020-12-17T02:17:56.062006Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -936,18 +1040,18 @@
       "\n",
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_source_A_gauge_Phi_rhs_unit_test.c -o Validation/Stilde_source_A_gauge_Phi_rhs_unit_test -lm`...\n",
-      "(BENCH): Finished executing in 1.211773157119751 seconds.\n",
+      "(BENCH): Finished executing in 0.8108372688293457 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 1.220733404159546 seconds.\n",
+      "Finished in 0.8203225135803223 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
-      "(EXEC): Executing `taskset -c 0,1,2,3 ./Validation/Stilde_source_A_gauge_Phi_rhs_unit_test 2 2 2`...\n",
-      "(BENCH): Finished executing in 0.2099742889404297 seconds.\n",
-      "(EXEC): Executing `taskset -c 0,1,2,3 ./Validation/Stilde_source_A_gauge_Phi_rhs_unit_test 4 4 4`...\n",
-      "(BENCH): Finished executing in 0.2087113857269287 seconds.\n",
-      "Finished in 0.433213472366333 seconds.\n",
+      "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Validation/Stilde_source_A_gauge_Phi_rhs_unit_test 2 2 2`...\n",
+      "(BENCH): Finished executing in 0.20926523208618164 seconds.\n",
+      "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Validation/Stilde_source_A_gauge_Phi_rhs_unit_test 4 4 4`...\n",
+      "(BENCH): Finished executing in 0.20845723152160645 seconds.\n",
+      "Finished in 0.4311966896057129 seconds.\n",
       "\n",
       "\n"
      ]
@@ -986,19 +1090,26 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:56.069751Z",
+     "iopub.status.busy": "2020-12-17T02:17:56.069184Z",
+     "iopub.status.idle": "2020-12-17T02:17:56.272319Z",
+     "shell.execute_reply": "2020-12-17T02:17:56.272760Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PASS: Stilde_rhsD0 has convergence order of 2.0331766047424455\n",
-      "PASS: Stilde_rhsD1 has convergence order of 1.7295387452475475\n",
-      "PASS: Stilde_rhsD2 has convergence order of 2.281679666408902\n",
-      "PASS: A_rhsD0 has convergence order of 1.9883658746322042\n",
-      "PASS: A_rhsD1 has convergence order of 1.993727313495029\n",
+      "PASS: Stilde_rhsD0 has convergence order of 2.033176604710238\n",
+      "PASS: Stilde_rhsD1 has convergence order of 1.7295387454228648\n",
+      "PASS: Stilde_rhsD2 has convergence order of 2.2816796609029266\n",
+      "PASS: A_rhsD0 has convergence order of 1.9883658746309683\n",
+      "PASS: A_rhsD1 has convergence order of 1.9937273134938553\n",
       "PASS: A_rhsD2 has convergence order of 2.002283802631376\n",
-      "PASS: psi6Phi_rhs has convergence order of 1.9752724953842962\n"
+      "PASS: psi6Phi_rhs has convergence order of 1.9752724953845153\n"
      ]
     }
    ],
@@ -1046,7 +1157,14 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:56.275527Z",
+     "iopub.status.busy": "2020-12-17T02:17:56.275001Z",
+     "iopub.status.idle": "2020-12-17T02:17:59.335706Z",
+     "shell.execute_reply": "2020-12-17T02:17:59.336141Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1080,7 +1198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
