--- a/NRPyPN/PN-Hamiltonian-Nonspinning.ipynb
+++ b/NRPyPN/PN-Hamiltonian-Nonspinning.ipynb
@@ -90,7 +90,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:14:48.231728Z",
+     "iopub.status.busy": "2020-12-17T02:14:48.231251Z",
+     "iopub.status.idle": "2020-12-17T02:14:48.397777Z",
+     "shell.execute_reply": "2020-12-17T02:14:48.397275Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 0: Add NRPy's directory to the path\n",
@@ -124,7 +131,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:14:48.404523Z",
+     "iopub.status.busy": "2020-12-17T02:14:48.403980Z",
+     "iopub.status.idle": "2020-12-17T02:14:48.405778Z",
+     "shell.execute_reply": "2020-12-17T02:14:48.405349Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Second version. This one was mostly a search+replace version\n",
@@ -188,7 +202,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:14:48.434290Z",
+     "iopub.status.busy": "2020-12-17T02:14:48.433866Z",
+     "iopub.status.idle": "2020-12-17T02:14:48.435720Z",
+     "shell.execute_reply": "2020-12-17T02:14:48.435290Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def f_H_NS_3PN(m1,m2, PU, nU, q):\n",
@@ -214,7 +235,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:14:48.441724Z",
+     "iopub.status.busy": "2020-12-17T02:14:48.441306Z",
+     "iopub.status.idle": "2020-12-17T02:14:48.442742Z",
+     "shell.execute_reply": "2020-12-17T02:14:48.442311Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Second version. This one was mostly a search+replace version\n",
@@ -261,7 +289,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:14:48.450466Z",
+     "iopub.status.busy": "2020-12-17T02:14:48.450044Z",
+     "iopub.status.idle": "2020-12-17T02:14:48.530709Z",
+     "shell.execute_reply": "2020-12-17T02:14:48.530287Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -317,7 +352,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:14:48.533123Z",
+     "iopub.status.busy": "2020-12-17T02:14:48.532711Z",
+     "iopub.status.idle": "2020-12-17T02:14:50.580105Z",
+     "shell.execute_reply": "2020-12-17T02:14:50.580524Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -351,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
