--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_multi_order.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_multi_order.ipynb
@@ -83,7 +83,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:46.733341Z",
+     "iopub.status.busy": "2020-12-17T02:02:46.732065Z",
+     "iopub.status.idle": "2020-12-17T02:02:46.738148Z",
+     "shell.execute_reply": "2020-12-17T02:02:46.737527Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
@@ -123,7 +130,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:46.742520Z",
+     "iopub.status.busy": "2020-12-17T02:02:46.741876Z",
+     "iopub.status.idle": "2020-12-17T02:02:46.744770Z",
+     "shell.execute_reply": "2020-12-17T02:02:46.745277Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -280,6 +294,12 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:46.748031Z",
+     "iopub.status.busy": "2020-12-17T02:02:46.747766Z",
+     "iopub.status.idle": "2020-12-17T02:02:46.749976Z",
+     "shell.execute_reply": "2020-12-17T02:02:46.750192Z"
+    },
     "scrolled": true
    },
    "outputs": [
@@ -344,7 +364,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:46.752740Z",
+     "iopub.status.busy": "2020-12-17T02:02:46.752478Z",
+     "iopub.status.idle": "2020-12-17T02:02:46.754439Z",
+     "shell.execute_reply": "2020-12-17T02:02:46.754642Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -425,7 +452,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:46.757541Z",
+     "iopub.status.busy": "2020-12-17T02:02:46.757120Z",
+     "iopub.status.idle": "2020-12-17T02:02:46.759277Z",
+     "shell.execute_reply": "2020-12-17T02:02:46.759596Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -509,7 +543,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:46.765314Z",
+     "iopub.status.busy": "2020-12-17T02:02:46.764795Z",
+     "iopub.status.idle": "2020-12-17T02:02:46.954675Z",
+     "shell.execute_reply": "2020-12-17T02:02:46.954187Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2: Import needed NRPy+ parameters\n",
@@ -565,7 +606,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:46.957335Z",
+     "iopub.status.busy": "2020-12-17T02:02:46.956829Z",
+     "iopub.status.idle": "2020-12-17T02:02:46.958732Z",
+     "shell.execute_reply": "2020-12-17T02:02:46.958237Z"
+    }
+   },
    "outputs": [],
    "source": [
     "NRPyoutfilename = os.path.join(Ccodesdir,\"src\",\"list_of_functions_to_interpolate.h\")\n",
@@ -604,7 +652,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:46.968322Z",
+     "iopub.status.busy": "2020-12-17T02:02:46.967904Z",
+     "iopub.status.idle": "2020-12-17T02:02:46.981911Z",
+     "shell.execute_reply": "2020-12-17T02:02:46.981443Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# INPUT GRIDFUNCTIONS: The AUX or EVOL designation is *not* used in diagnostic modules.\n",
@@ -642,7 +697,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:46.988323Z",
+     "iopub.status.busy": "2020-12-17T02:02:46.987778Z",
+     "iopub.status.idle": "2020-12-17T02:02:47.335023Z",
+     "shell.execute_reply": "2020-12-17T02:02:47.334569Z"
+    }
+   },
    "outputs": [],
    "source": [
     "IGMvU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"IGMvU\")\n",
@@ -699,7 +761,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:47.364127Z",
+     "iopub.status.busy": "2020-12-17T02:02:47.352345Z",
+     "iopub.status.idle": "2020-12-17T02:02:47.371498Z",
+     "shell.execute_reply": "2020-12-17T02:02:47.370977Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Eq. 2.121 in B&S\n",
@@ -766,7 +835,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:47.398885Z",
+     "iopub.status.busy": "2020-12-17T02:02:47.388694Z",
+     "iopub.status.idle": "2020-12-17T02:02:47.414187Z",
+     "shell.execute_reply": "2020-12-17T02:02:47.413759Z"
+    }
+   },
    "outputs": [],
    "source": [
     "betaDdD = ixp.zerorank2()\n",
@@ -821,7 +897,14 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:47.441363Z",
+     "iopub.status.busy": "2020-12-17T02:02:47.436598Z",
+     "iopub.status.idle": "2020-12-17T02:02:54.705196Z",
+     "shell.execute_reply": "2020-12-17T02:02:54.704616Z"
+    }
+   },
    "outputs": [],
    "source": [
     "Gamma4UDD = ixp.zerorank3(DIM=4)\n",
@@ -856,7 +939,14 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:54.708780Z",
+     "iopub.status.busy": "2020-12-17T02:02:54.708066Z",
+     "iopub.status.idle": "2020-12-17T02:02:54.710446Z",
+     "shell.execute_reply": "2020-12-17T02:02:54.710861Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -931,7 +1021,14 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:54.714038Z",
+     "iopub.status.busy": "2020-12-17T02:02:54.713602Z",
+     "iopub.status.idle": "2020-12-17T02:02:54.715635Z",
+     "shell.execute_reply": "2020-12-17T02:02:54.715261Z"
+    }
+   },
    "outputs": [],
    "source": [
     "with open(os.path.join(Ccodesdir,\"src\",\"get_gf_name.h\"), \"w\") as file:\n",
@@ -956,7 +1053,14 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:54.718430Z",
+     "iopub.status.busy": "2020-12-17T02:02:54.718006Z",
+     "iopub.status.idle": "2020-12-17T02:02:54.720066Z",
+     "shell.execute_reply": "2020-12-17T02:02:54.719718Z"
+    }
+   },
    "outputs": [],
    "source": [
     "with open(os.path.join(Ccodesdir,\"src\",\"define_NumInterpFunctions.h\"), \"w\") as file:\n",
@@ -966,7 +1070,14 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:54.723050Z",
+     "iopub.status.busy": "2020-12-17T02:02:54.722434Z",
+     "iopub.status.idle": "2020-12-17T02:02:54.724737Z",
+     "shell.execute_reply": "2020-12-17T02:02:54.725084Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1060,7 +1171,14 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:54.728072Z",
+     "iopub.status.busy": "2020-12-17T02:02:54.727500Z",
+     "iopub.status.idle": "2020-12-17T02:02:54.730068Z",
+     "shell.execute_reply": "2020-12-17T02:02:54.729632Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1093,7 +1211,14 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:54.733093Z",
+     "iopub.status.busy": "2020-12-17T02:02:54.732487Z",
+     "iopub.status.idle": "2020-12-17T02:02:54.734723Z",
+     "shell.execute_reply": "2020-12-17T02:02:54.735067Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1152,7 +1277,14 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:54.738312Z",
+     "iopub.status.busy": "2020-12-17T02:02:54.737674Z",
+     "iopub.status.idle": "2020-12-17T02:02:54.740275Z",
+     "shell.execute_reply": "2020-12-17T02:02:54.740615Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1292,7 +1424,14 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:54.744428Z",
+     "iopub.status.busy": "2020-12-17T02:02:54.743780Z",
+     "iopub.status.idle": "2020-12-17T02:02:54.746308Z",
+     "shell.execute_reply": "2020-12-17T02:02:54.746654Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1551,7 +1690,14 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:02:54.749331Z",
+     "iopub.status.busy": "2020-12-17T02:02:54.748912Z",
+     "iopub.status.idle": "2020-12-17T02:02:58.001713Z",
+     "shell.execute_reply": "2020-12-17T02:02:58.001257Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1586,7 +1732,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
