--- a/Tutorial-Finite_Difference_Derivatives-FDtable_soln.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives-FDtable_soln.ipynb
@@ -21,7 +21,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:04:21.305554Z",
+     "iopub.status.busy": "2020-12-17T02:04:21.304841Z",
+     "iopub.status.idle": "2020-12-17T02:04:23.529015Z",
+     "shell.execute_reply": "2020-12-17T02:04:23.528709Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -114,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
