--- a/Tutorial-Finite_Difference_Derivatives.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives.ipynb
@@ -120,7 +120,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:04:26.917967Z",
+     "iopub.status.busy": "2020-12-17T02:04:26.917511Z",
+     "iopub.status.idle": "2020-12-17T02:04:27.114726Z",
+     "shell.execute_reply": "2020-12-17T02:04:27.115165Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -212,6 +219,12 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:04:27.119343Z",
+     "iopub.status.busy": "2020-12-17T02:04:27.118781Z",
+     "iopub.status.idle": "2020-12-17T02:04:27.167836Z",
+     "shell.execute_reply": "2020-12-17T02:04:27.167292Z"
+    },
     "scrolled": true
    },
    "outputs": [
@@ -244,8 +257,7 @@
       "    *  \"aux_gfs[IDX2(OUTPUTGF, i0)] = phi_dDD00\"\n",
       "    */\n",
       "   aux_gfs[IDX2(OUTPUTGF, i0)] = phi_dDD00;\n",
-      "}\n",
-      "\n"
+      "}\n"
      ]
     }
    ],
@@ -302,7 +314,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:04:27.170604Z",
+     "iopub.status.busy": "2020-12-17T02:04:27.170086Z",
+     "iopub.status.idle": "2020-12-17T02:04:29.421526Z",
+     "shell.execute_reply": "2020-12-17T02:04:29.421048Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -335,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
