--- a/Tutorial-GRHD_Equations-Cartesian.ipynb
+++ b/Tutorial-GRHD_Equations-Cartesian.ipynb
@@ -152,7 +152,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:04:50.116677Z",
+     "iopub.status.busy": "2020-12-17T02:04:50.115971Z",
+     "iopub.status.idle": "2020-12-17T02:04:50.277167Z",
+     "shell.execute_reply": "2020-12-17T02:04:50.276626Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 1: Import needed core NRPy+ modules\n",
@@ -186,7 +193,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:04:50.302431Z",
+     "iopub.status.busy": "2020-12-17T02:04:50.301892Z",
+     "iopub.status.idle": "2020-12-17T02:04:50.303970Z",
+     "shell.execute_reply": "2020-12-17T02:04:50.303503Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2.a: First define h, the enthalpy:\n",
@@ -245,7 +259,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:04:50.308896Z",
+     "iopub.status.busy": "2020-12-17T02:04:50.308363Z",
+     "iopub.status.idle": "2020-12-17T02:04:50.310465Z",
+     "shell.execute_reply": "2020-12-17T02:04:50.309932Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 3: Writing the conservative variables in terms of the primitive variables\n",
@@ -295,7 +316,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:04:50.314311Z",
+     "iopub.status.busy": "2020-12-17T02:04:50.313895Z",
+     "iopub.status.idle": "2020-12-17T02:04:50.316002Z",
+     "shell.execute_reply": "2020-12-17T02:04:50.315655Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 4: Define the fluxes for the GRHD equations\n",
@@ -336,7 +364,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:04:50.320204Z",
+     "iopub.status.busy": "2020-12-17T02:04:50.319783Z",
+     "iopub.status.idle": "2020-12-17T02:04:50.321401Z",
+     "shell.execute_reply": "2020-12-17T02:04:50.321735Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 4.c: tau_tilde flux\n",
@@ -380,7 +415,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:04:50.326012Z",
+     "iopub.status.busy": "2020-12-17T02:04:50.325610Z",
+     "iopub.status.idle": "2020-12-17T02:04:50.327586Z",
+     "shell.execute_reply": "2020-12-17T02:04:50.327232Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def compute_s_source_term(KDD,betaU,alpha, sqrtgammaDET,alpha_dD, T4UU):\n",
@@ -447,7 +489,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:04:50.334550Z",
+     "iopub.status.busy": "2020-12-17T02:04:50.334150Z",
+     "iopub.status.idle": "2020-12-17T02:04:50.336180Z",
+     "shell.execute_reply": "2020-12-17T02:04:50.335758Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def compute_g4DD_zerotimederiv_dD(gammaDD,betaU,alpha, gammaDD_dD,betaU_dD,alpha_dD):\n",
@@ -499,7 +548,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:04:50.339925Z",
+     "iopub.status.busy": "2020-12-17T02:04:50.339409Z",
+     "iopub.status.idle": "2020-12-17T02:04:50.341394Z",
+     "shell.execute_reply": "2020-12-17T02:04:50.340880Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 5.b.ii: Compute S_tilde source term\n",
@@ -626,7 +682,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:04:50.349852Z",
+     "iopub.status.busy": "2020-12-17T02:04:50.349316Z",
+     "iopub.status.idle": "2020-12-17T02:04:50.351183Z",
+     "shell.execute_reply": "2020-12-17T02:04:50.350709Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 6.a: Convert Valencia 3-velocity v_{(n)}^i into u^\\mu, and apply a speed limiter\n",
@@ -711,7 +774,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:04:50.363766Z",
+     "iopub.status.busy": "2020-12-17T02:04:50.363354Z",
+     "iopub.status.idle": "2020-12-17T02:04:50.519665Z",
+     "shell.execute_reply": "2020-12-17T02:04:50.519186Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# First define hydrodynamical quantities\n",
@@ -780,7 +850,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:04:50.524442Z",
+     "iopub.status.busy": "2020-12-17T02:04:50.523913Z",
+     "iopub.status.idle": "2020-12-17T02:04:50.531157Z",
+     "shell.execute_reply": "2020-12-17T02:04:50.530637Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import GRHD.equations as Ge\n",
@@ -826,6 +903,12 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:04:50.543115Z",
+     "iopub.status.busy": "2020-12-17T02:04:50.537546Z",
+     "iopub.status.idle": "2020-12-17T02:04:50.552829Z",
+     "shell.execute_reply": "2020-12-17T02:04:50.553261Z"
+    },
     "scrolled": true
    },
    "outputs": [
@@ -914,7 +997,14 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:04:50.555777Z",
+     "iopub.status.busy": "2020-12-17T02:04:50.555221Z",
+     "iopub.status.idle": "2020-12-17T02:04:53.004973Z",
+     "shell.execute_reply": "2020-12-17T02:04:53.004459Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -947,7 +1037,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
