--- a/Tutorial-Indexed_Expressions_soln.ipynb
+++ b/Tutorial-Indexed_Expressions_soln.ipynb
@@ -21,7 +21,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:05:06.185437Z",
+     "iopub.status.busy": "2020-12-17T02:05:06.184782Z",
+     "iopub.status.idle": "2020-12-17T02:05:06.398769Z",
+     "shell.execute_reply": "2020-12-17T02:05:06.398244Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -89,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
