--- a/Tutorial-Loop_Generation_Cache_Blocking_soln.ipynb
+++ b/Tutorial-Loop_Generation_Cache_Blocking_soln.ipynb
@@ -21,7 +21,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:05:18.554724Z",
+     "iopub.status.busy": "2020-12-17T02:05:18.553968Z",
+     "iopub.status.idle": "2020-12-17T02:05:18.556835Z",
+     "shell.execute_reply": "2020-12-17T02:05:18.557185Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -67,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.1"
   },
   "mimetype": "text/x-python",
   "name": "python",
