--- a/Tutorial-Psi4_tetrads.ipynb
+++ b/Tutorial-Psi4_tetrads.ipynb
@@ -87,7 +87,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:05:59.824565Z",
+     "iopub.status.busy": "2020-12-17T02:05:59.824150Z",
+     "iopub.status.idle": "2020-12-17T02:06:00.555142Z",
+     "shell.execute_reply": "2020-12-17T02:06:00.555382Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 1.a: import all needed modules from NRPy+:\n",
@@ -155,7 +162,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:00.621530Z",
+     "iopub.status.busy": "2020-12-17T02:06:00.583460Z",
+     "iopub.status.idle": "2020-12-17T02:06:01.926325Z",
+     "shell.execute_reply": "2020-12-17T02:06:01.926563Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2.a: Declare the Cartesian x,y,z in terms of\n",
@@ -211,7 +225,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:01.946846Z",
+     "iopub.status.busy": "2020-12-17T02:06:01.946564Z",
+     "iopub.status.idle": "2020-12-17T02:06:01.948373Z",
+     "shell.execute_reply": "2020-12-17T02:06:01.948137Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2.g: Define v3U\n",
@@ -250,7 +271,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:01.990520Z",
+     "iopub.status.busy": "2020-12-17T02:06:01.980382Z",
+     "iopub.status.idle": "2020-12-17T02:06:02.000836Z",
+     "shell.execute_reply": "2020-12-17T02:06:02.000596Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2.h: Define omega_{ij}\n",
@@ -321,6 +349,12 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:02.006369Z",
+     "iopub.status.busy": "2020-12-17T02:06:02.006088Z",
+     "iopub.status.idle": "2020-12-17T02:06:02.007898Z",
+     "shell.execute_reply": "2020-12-17T02:06:02.007621Z"
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -380,7 +414,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:02.014937Z",
+     "iopub.status.busy": "2020-12-17T02:06:02.014278Z",
+     "iopub.status.idle": "2020-12-17T02:06:03.528968Z",
+     "shell.execute_reply": "2020-12-17T02:06:03.528695Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -439,7 +480,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:03.531147Z",
+     "iopub.status.busy": "2020-12-17T02:06:03.530751Z",
+     "iopub.status.idle": "2020-12-17T02:06:05.783827Z",
+     "shell.execute_reply": "2020-12-17T02:06:05.784256Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -472,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
