--- a/Tutorial-RK_Butcher_Table_Dictionary.ipynb
+++ b/Tutorial-RK_Butcher_Table_Dictionary.ipynb
@@ -89,7 +89,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:18.898452Z",
+     "iopub.status.busy": "2020-12-17T02:06:18.897987Z",
+     "iopub.status.idle": "2020-12-17T02:06:19.062957Z",
+     "shell.execute_reply": "2020-12-17T02:06:19.062405Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 1: Initialize needed Python modules\n",
@@ -177,7 +184,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:19.065786Z",
+     "iopub.status.busy": "2020-12-17T02:06:19.065267Z",
+     "iopub.status.idle": "2020-12-17T02:06:19.067399Z",
+     "shell.execute_reply": "2020-12-17T02:06:19.066864Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2a: Generating a Dictionary of Butcher Tables for Explicit Runge Kutta Techniques\n",
@@ -207,7 +221,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:19.070703Z",
+     "iopub.status.busy": "2020-12-17T02:06:19.070172Z",
+     "iopub.status.idle": "2020-12-17T02:06:19.072338Z",
+     "shell.execute_reply": "2020-12-17T02:06:19.071778Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2.a.i: Euler's Method\n",
@@ -244,7 +265,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:19.075591Z",
+     "iopub.status.busy": "2020-12-17T02:06:19.075171Z",
+     "iopub.status.idle": "2020-12-17T02:06:19.077217Z",
+     "shell.execute_reply": "2020-12-17T02:06:19.076794Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2.a.ii: RK2 Heun's Method\n",
@@ -282,7 +310,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:19.080271Z",
+     "iopub.status.busy": "2020-12-17T02:06:19.079852Z",
+     "iopub.status.idle": "2020-12-17T02:06:19.081884Z",
+     "shell.execute_reply": "2020-12-17T02:06:19.081476Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2.a.iii: RK2 Midpoint (MP) Method\n",
@@ -320,7 +355,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:19.084963Z",
+     "iopub.status.busy": "2020-12-17T02:06:19.084564Z",
+     "iopub.status.idle": "2020-12-17T02:06:19.086602Z",
+     "shell.execute_reply": "2020-12-17T02:06:19.086197Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2.a.iv: RK2 Ralston's Method\n",
@@ -360,7 +402,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:19.090015Z",
+     "iopub.status.busy": "2020-12-17T02:06:19.089616Z",
+     "iopub.status.idle": "2020-12-17T02:06:19.091622Z",
+     "shell.execute_reply": "2020-12-17T02:06:19.091216Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2.a.v: Kutta's  Third-order Method\n",
@@ -404,7 +453,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:19.095056Z",
+     "iopub.status.busy": "2020-12-17T02:06:19.094657Z",
+     "iopub.status.idle": "2020-12-17T02:06:19.096661Z",
+     "shell.execute_reply": "2020-12-17T02:06:19.096261Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2.a.vi: RK3 Heun's Method\n",
@@ -448,7 +504,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:19.100041Z",
+     "iopub.status.busy": "2020-12-17T02:06:19.099634Z",
+     "iopub.status.idle": "2020-12-17T02:06:19.101630Z",
+     "shell.execute_reply": "2020-12-17T02:06:19.101226Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2.a.vii: RK3 Ralton's Method\n",
@@ -492,7 +555,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:19.104962Z",
+     "iopub.status.busy": "2020-12-17T02:06:19.104564Z",
+     "iopub.status.idle": "2020-12-17T02:06:19.106475Z",
+     "shell.execute_reply": "2020-12-17T02:06:19.106071Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2.a.viii: Strong Stability Preserving Runge-Kutta (SSPRK3) Method\n",
@@ -538,7 +608,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:19.110345Z",
+     "iopub.status.busy": "2020-12-17T02:06:19.109944Z",
+     "iopub.status.idle": "2020-12-17T02:06:19.111877Z",
+     "shell.execute_reply": "2020-12-17T02:06:19.111473Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2.a.vix: Classic RK4 Method\n",
@@ -578,7 +655,14 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:19.118704Z",
+     "iopub.status.busy": "2020-12-17T02:06:19.118299Z",
+     "iopub.status.idle": "2020-12-17T02:06:19.120043Z",
+     "shell.execute_reply": "2020-12-17T02:06:19.119634Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2.a.x:  RK5 Dormand-Prince Method\n",
@@ -621,7 +705,14 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:19.124842Z",
+     "iopub.status.busy": "2020-12-17T02:06:19.124438Z",
+     "iopub.status.idle": "2020-12-17T02:06:19.126236Z",
+     "shell.execute_reply": "2020-12-17T02:06:19.125828Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2.a.xi:  RK5 Dormand-Prince Method Alternative\n",
@@ -665,7 +756,14 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:19.131838Z",
+     "iopub.status.busy": "2020-12-17T02:06:19.131437Z",
+     "iopub.status.idle": "2020-12-17T02:06:19.133355Z",
+     "shell.execute_reply": "2020-12-17T02:06:19.132951Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2.a.xii:  RK5 Cash-Karp Method\n",
@@ -710,7 +808,14 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:19.161496Z",
+     "iopub.status.busy": "2020-12-17T02:06:19.161085Z",
+     "iopub.status.idle": "2020-12-17T02:06:19.162969Z",
+     "shell.execute_reply": "2020-12-17T02:06:19.162556Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2.a.xiii:  RK6 Dormand-Prince Method\n",
@@ -755,7 +860,14 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:19.168363Z",
+     "iopub.status.busy": "2020-12-17T02:06:19.167953Z",
+     "iopub.status.idle": "2020-12-17T02:06:19.191553Z",
+     "shell.execute_reply": "2020-12-17T02:06:19.191148Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#  Step 2.a.xiv:  RK6 Luther's Method\n",
@@ -806,7 +918,14 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:19.202645Z",
+     "iopub.status.busy": "2020-12-17T02:06:19.202127Z",
+     "iopub.status.idle": "2020-12-17T02:06:19.204037Z",
+     "shell.execute_reply": "2020-12-17T02:06:19.203517Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 2.a.xv:  RK8 Dormand-Prince Method\n",
@@ -848,7 +967,14 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:19.207107Z",
+     "iopub.status.busy": "2020-12-17T02:06:19.206602Z",
+     "iopub.status.idle": "2020-12-17T02:06:19.210003Z",
+     "shell.execute_reply": "2020-12-17T02:06:19.209569Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -890,7 +1016,14 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:06:19.212287Z",
+     "iopub.status.busy": "2020-12-17T02:06:19.211964Z",
+     "iopub.status.idle": "2020-12-17T02:06:21.863130Z",
+     "shell.execute_reply": "2020-12-17T02:06:21.863551Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -923,7 +1056,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
