--- a/Tutorial-UnitTesting.ipynb
+++ b/Tutorial-UnitTesting.ipynb
@@ -487,7 +487,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:07:37.032982Z",
+     "iopub.status.busy": "2020-12-17T02:07:37.032435Z",
+     "iopub.status.idle": "2020-12-17T02:07:39.273185Z",
+     "shell.execute_reply": "2020-12-17T02:07:39.272629Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -520,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
