--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM.ipynb
@@ -71,7 +71,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:25.485508Z",
+     "iopub.status.busy": "2020-12-17T02:17:25.484884Z",
+     "iopub.status.idle": "2020-12-17T02:17:25.667960Z",
+     "shell.execute_reply": "2020-12-17T02:17:25.667361Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import shutil, os, sys           # Standard Python modules for multiplatform OS-level functions\n",
@@ -126,7 +133,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:25.675174Z",
+     "iopub.status.busy": "2020-12-17T02:17:25.674537Z",
+     "iopub.status.idle": "2020-12-17T02:17:25.720625Z",
+     "shell.execute_reply": "2020-12-17T02:17:25.720237Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def max_noif(a,b):\n",
@@ -176,7 +190,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:25.725989Z",
+     "iopub.status.busy": "2020-12-17T02:17:25.725540Z",
+     "iopub.status.idle": "2020-12-17T02:17:25.730337Z",
+     "shell.execute_reply": "2020-12-17T02:17:25.729882Z"
+    }
+   },
    "outputs": [],
    "source": [
     "d,e,f = par.Cparameters(\"REAL\",thismodule,[\"d\",\"e\",\"f\"],1e300) # Note that this default value allows us to set\n",
@@ -203,7 +224,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:25.748421Z",
+     "iopub.status.busy": "2020-12-17T02:17:25.747182Z",
+     "iopub.status.idle": "2020-12-17T02:17:25.779987Z",
+     "shell.execute_reply": "2020-12-17T02:17:25.780475Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -259,7 +287,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:25.783855Z",
+     "iopub.status.busy": "2020-12-17T02:17:25.783265Z",
+     "iopub.status.idle": "2020-12-17T02:17:25.785811Z",
+     "shell.execute_reply": "2020-12-17T02:17:25.785268Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Step 3.d.i: Generate declare_Cparameters_struct.h, set_Cparameters_default.h, and set_Cparameters[-SIMD].h\n",
@@ -309,7 +344,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:25.791068Z",
+     "iopub.status.busy": "2020-12-17T02:17:25.790815Z",
+     "iopub.status.idle": "2020-12-17T02:17:26.119316Z",
+     "shell.execute_reply": "2020-12-17T02:17:26.119750Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# First download the original IllinoisGRMHD source code\n",
@@ -352,7 +394,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:26.123557Z",
+     "iopub.status.busy": "2020-12-17T02:17:26.123020Z",
+     "iopub.status.idle": "2020-12-17T02:17:26.125672Z",
+     "shell.execute_reply": "2020-12-17T02:17:26.126091Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import GiRaFFE_NRPy.GiRaFFE_NRPy_PPM as PPM\n",
@@ -374,7 +423,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:26.131567Z",
+     "iopub.status.busy": "2020-12-17T02:17:26.130705Z",
+     "iopub.status.idle": "2020-12-17T02:17:26.133508Z",
+     "shell.execute_reply": "2020-12-17T02:17:26.133835Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -812,7 +868,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:26.139767Z",
+     "iopub.status.busy": "2020-12-17T02:17:26.137855Z",
+     "iopub.status.idle": "2020-12-17T02:17:26.781691Z",
+     "shell.execute_reply": "2020-12-17T02:17:26.782025Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -822,16 +885,16 @@
       "\n",
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/PPM_unit_test.C -o Validation/PPM_unit_test -lm`...\n",
-      "(BENCH): Finished executing in 0.408974170685 seconds.\n",
+      "(BENCH): Finished executing in 0.40943098068237305 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 0.418359994888 seconds.\n",
+      "Finished in 0.41932153701782227 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Validation/PPM_unit_test `...\n",
-      "(BENCH): Finished executing in 0.20675611496 seconds.\n",
-      "Finished in 0.21869301796 seconds.\n",
+      "(BENCH): Finished executing in 0.20782995223999023 seconds.\n",
+      "Finished in 0.22144317626953125 seconds.\n",
       "\n",
       "\n"
      ]
@@ -864,7 +927,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:26.786194Z",
+     "iopub.status.busy": "2020-12-17T02:17:26.785774Z",
+     "iopub.status.idle": "2020-12-17T02:17:26.788424Z",
+     "shell.execute_reply": "2020-12-17T02:17:26.788063Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -911,7 +981,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:17:26.791164Z",
+     "iopub.status.busy": "2020-12-17T02:17:26.790744Z",
+     "iopub.status.idle": "2020-12-17T02:17:29.239578Z",
+     "shell.execute_reply": "2020-12-17T02:17:29.240003Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -933,19 +1010,19 @@
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.17"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
